--- a/index_de.html
+++ b/index_de.html
@@ -129,6 +129,17 @@
                           <li><a href="#komento">Komento</a></li>
                           <li><a href="#kunena">Kunena</a></li>
                           <li><a href="#tm_ajax_contact_form">Modul TM Ajax Contact Form</a></li>
+                          <li><a href="#olark">TM Olark live chat</a></li>
+                          <li><a href="#facebook_feed">SW Facebook Display</a></li>
+                          <li><a href="#pinterest_feed">SW Pinterest Display</a></li>
+                          <li><a href="#twitter_feed">SW Twitter Display</a></li>
+                          <li><a href="#instagram_feed">TM Instagram</a></li>
+                          <li><a href="#social_login">Joomla Social Login</a></li>
+                          <li><a href="#acymailing">Acymailing</a></li>
+                          <li><a href="#tmaddthis">TM Addthis</a></li>
+                          <li><a href="#googlemap">Googlemap plugin</a></li>
+                          <li><a href="#cookies">Joomla Cookie Directive Plugin</a></li>
+                          <li><a href="#joomgallery">JoomGallery</a></li>
                         </ul>
                       </dd>
                     </dl>
@@ -1092,6 +1103,146 @@ Damit Sie Beispieldaten in der Datenbank importieren, fühlen Sie diese leichte 
     <div class="img-container"><figure class="img-polaroid"><img src="img/contact-form-2.png" alt=""></figure>
     <p class="muted text-center">Bild. 24. Moduleinstellungen TM Ajax Contact Form</p></div>
 
+  </div>
+
+  <div id="olark">
+    <h3>TM Olark live chat Modul</h3> 
+    <div class="img-container"><figure class="img-polaroid"><img src="img/olark.jpg" alt=""></figure> 
+    <p class="muted text-center">Bild. 25. TM Olark live chat Modul</p></div> 
+    <p>TM Olark live chat ist ein Live Chat Modul für Joomla.</p> 
+    <div class="img-container"><figure class="img-polaroid"><img src="img/olark-2.jpg" alt=""></figure> 
+    <p class="muted text-center">Bild. 25-1. TM Olark live chat Moduleinstellungen</p></div> 
+    <p>In den Grundeinstellungen dieses Moduls sollen Sie nur die Website-URL angeben, die auf der Webseite angezeigt wird, sobald Sie es registriert und alle notwendigen Daten ausgefüllt haben <a href="https://www.olark.com/install" target="_blank" rel="nofollow">https://www.olark.com/install</a></p> 
+    <div class="img-container"><figure class="img-polaroid"><img src="img/olark-3.jpg" alt=""></figure> 
+    <p class="muted text-center">Bild. 25-2. Die Website-URL im Control Panel Olark.</p></div> 
+    <p>Unser Unternehmen stellt Ihnen den Tarifplan <a href="https://www.olark.com/pricing" target="_blank" rel="nofollow">"Bronze"</a> innerhalb von 6 Monaten gratis zur Verfügung. Folgen Sie diesem Link <a href="https://www.olark.com/signup/create_new_account/18981?utm_source=templatemonster&utm_medium=offer&utm_campaign=default" target="_blank" rel="nofollow">um es zu registrieren</a>.</p>
+  </div>
+
+  <div id="facebook_feed">
+    <h3>SW Facebook Display</h3>
+    <div class="img-container"><figure class="img-polaroid"><img src="img/facebook_feed-1.jpg" alt=""></figure>
+    <p class="muted text-center">Bild 26. Modul SW Facebook Display</p></div>
+    <p>SW Facebook Display ist ein Modul, das "Facebook Like Box" anzeigt.</p>
+    <div class="img-container"><figure class="img-polaroid"><img src="img/facebook_feed-2.jpg" alt=""></figure>
+    <p class="muted text-center">Bilder 26-1. Moduleinstellungen SW Facebook Display</p></div>
+    <p>So sehen die Grundeinstellungen des Moduls SW Facebook Display aus. Ausführliche Inormation darüber finden Sie <a href="http://socialwidgets.net/documentation/26-sw-facebook-display.html" target="_blank" rel="nofollow">auf der offiziellen Webseite</a>.</p>
+  </div>
+
+  <div id="pinterest_feed">
+    <h3>SW Pinterest Display</h3>
+    <div class="img-container"><figure class="img-polaroid"><img src="img/pinterest_feed-1.jpg" alt=""></figure>
+    <p class="muted text-center">Bild 27. Modul SW Pinterest Display</p></div>
+    <p>SW Pinterest Display ist ein Modul, das "Pinterest Board Widget" anzeigt.</p>
+    <div class="img-container"><figure class="img-polaroid"><img src="img/pinterest_feed-2.jpg" alt=""></figure>
+    <p class="muted text-center">Bild 27-1. Moduleinstellungen SW Pinterest Display</p></div>
+    <p>So sehen die Grundeinstellungen des Moduls SW Pinterest Display aus. Ausführliche Inormation darüber finden Sie <a href="http://socialwidgets.net/documentation/28-sw-pinterest-display.html" target="_blank" rel="nofollow">auf der offiziellen Webseite</a>.</p>
+  </div>
+
+  <div id="twitter_feed">
+    <h3>SW Twitter Display</h3>
+    <div class="img-container"><figure class="img-polaroid"><img src="img/twitter_feed-1.jpg" alt=""></figure>
+    <p class="muted text-center">Bild 28. Modul SW Twitter Display</p></div>
+    <p>SW Twitter Display ist ein Modul, das "Twitter Widget" anzeigt.</p>
+    <div class="img-container"><figure class="img-polaroid"><img src="img/twitter_feed-2.jpg" alt=""></figure>
+    <p class="muted text-center">Bilder 28-1. Moduleinstellungen SW Twitter Display</p></div>
+    <p>So sehen die Grundeinstellungen des Moduls SW Twitter Display aus. Ausführliche Inormation darüber finden Sie <a href="http://socialwidgets.net/documentation/27-sw-twitter-display.html" target="_blank" rel="nofollow">auf der offiziellen Webseite</a>.</p>
+  </div>
+
+  <div id="instagram_feed">
+    <h3>TM Instagram</h3>
+    <div class="img-container"><figure class="img-polaroid"><img src="img/instagram-1.jpg" alt=""></figure>
+    <p class="muted text-center">Bild 29. Modul TM Instagram</p></div>
+    <p>TM Instagram ist ein Modul, das "Instagram Widget" anzeigt</p>
+    <div class="img-container"><figure class="img-polaroid"><img src="img/instagram-2.jpg" alt=""></figure>
+    <p class="muted text-center">Bild 29-1. Moduleinstellungen TM Instagram</p></div>
+    <p>So sehen die Grundeinstellungen des Moduls TM Instagram aus. Im Feld Instagram username wird der Profilnamen in Instagram angegeben. Im Feld Number of photos wird die Anzahl von Bildern, die im Widget angezeigt werden, angegeben. Im Feld Your Instagram CLIENT ID wird die ID Ihrer Anwendung Instagram angegeben. Um die ID zu erhalten, folgen Sie dem Link <a href="https://instagram.com/accounts/login/?next=%2Fdeveloper%2F" target="_blank" rel="nofollow">https://instagram.com/accounts/login/?next=%2Fdeveloper%2F</a> und registrieren Sie sich. Dann folgen Sie dem Link <a href="http://instagram.com/developer/clients/manage/" target="_blank" rel="nofollow">http://instagram.com/developer/clients/manage/</a> und erstellen Sie dort die Anwendung. Danach erhalten Sie die Daten Ihrer Anwendung, in denen die ID (CLIENT ID) angegeben wird.</p>
+  </div>
+
+  <div id="social_login">
+    <h3>Joomla Social Login</h3>
+    <div class="img-container"><figure class="img-polaroid"><img src="img/sociallogin-1.jpg" alt=""></figure>
+    <p class="muted text-center">Bild 30. Komponente Joomla Social Login</p></div>
+    <p>Joomla Social Login ist eine Komponente, die Login-Buttons per soziale Netzwerke anzeigt.</p>
+    <div class="img-container"><figure class="img-polaroid"><img src="img/sociallogin-2.jpg" alt=""></figure>
+    <p class="muted text-center">Bild 30-1. Einstellungen für die Komponente Joomla Social Login</p></div>
+    <p>So sehen die Grundeinstellungen für die Komponente Joomla Social Login aus. Ausführliche Inormation darüber finden Sie <a href="http://support.loginradius.com/hc/en-us/articles/201968987-Joomla-Social-Login-instructions" target="_blank" rel="nofollow">auf der offiziellen Webseite</a>.</p>
+  </div>
+
+  <div id="acymailing">
+    <h3>Acymailing</h3>
+    <div class="img-container"><figure class="img-polaroid"><img src="img/acymailing-1.jpg" alt=""></figure>
+    <p class="muted text-center">Bild 31. Komponente Acymailing</p></div>
+    <p>Acymailing ist eine Komponente für das Abonnement für Joomla!</p>
+    <div class="img-container"><figure class="img-polaroid"><img src="img/acymailing-2.jpg" alt=""></figure>
+    <p class="muted text-center">Bilder 31-1. Einstellungen für die Komponente Acymailing</p></div>
+    <p>So sieht die Hauptseite von der Komponente Acymailing im Control Panel aus. Ausführliche Inormation darüber finden Sie <a href="https://www.acyba.com/acymailing/doc.html" target="_blank" rel="nofollow">auf der offiziellen Webseite</a>.</p>
+    <div class="img-container"><figure class="img-polaroid"><img src="img/acymailing-3.jpg" alt=""></figure>
+    <p class="muted text-center">Bilder 31-2. Moduleinstellungen Acymailing</p></div>
+    <p>So sieht die Seite von Moduleinstellungen Acymailing aus. Ausführliche Inormation darüber finden Sie <a href="https://www.acyba.com/acymailing/62-acymailing-module.html" target="_blank" rel="nofollow">auf der offiziellen Webseite</a>.</p>
+    <p>Mit der Komponente Acymailing werden auch System-Plugins installiert:</p> 
+    <ul>
+      <li>plg_acymailing_contentplugin</li>
+      <li>plg_acymailing_managetext</li>
+      <li>plg_acymailing_online</li>
+      <li>plg_acymailing_share</li>
+      <li>plg_acymailing_stats</li>
+      <li>plg_acymailing_tablecontents</li>
+      <li>plg_acymailing_tagcbuser</li>
+      <li>plg_acymailing_tagcontent</li>
+      <li>plg_acymailing_tagsubscriber</li>
+      <li>plg_acymailing_tagsubscription</li>
+      <li>plg_acymailing_tagtime</li>
+      <li>plg_acymailing_taguser</li>
+      <li>plg_acymailing_template</li>
+      <li>plg_editors_acyeditor</li>
+      <li>plg_system_regacymailing</li>
+    </ul>
+  </div>
+
+  <div id="tmaddthis">
+    <h3>TM Addthis</h3>
+    <div class="img-container"><figure class="img-polaroid"><img src="img/addthis-1.jpg" alt=""></figure>
+    <p class="muted text-center">Bild 32. Plugin TM Addthis</p></div>
+    <p>TM Addthis ist ein Plugin, das Buttons "Teilen" anzeigt.</p>
+    <div class="img-container"><figure class="img-polaroid"><img src="img/addthis-2.jpg" alt=""></figure>
+    <p class="muted text-center">Bild 32-1. Moduleinstellungen TM Addthis</p></div>
+    <p>So sehen die Grundeinstellungen des Plugins TM Addthis aus. Im Feld Profile ID wird die Profil-ID angegeben, die nach der Registrierung und Erstellung des Profils auf der Seite <a href="https://www.addthis.com/settings/publisher" target="_blank" rel="nofollow">https://www.addthis.com/settings/publisher</a>eingegeben wurde.</p>
+  </div>
+
+  <div id="googlemap">
+    <h3>Googlemap plugin</h3>
+    <div class="img-container"><figure class="img-polaroid"><img src="img/googlemap-1.jpg" alt=""></figure>
+    <p class="muted text-center">Bild 33. Plugin Googlemap</p></div>
+    <p>Googlemap ist ein Plugin, das die Google Karte anzeigt.</p>
+    <div class="img-container"><figure class="img-polaroid"><img src="img/googlemap-2.jpg" alt=""></figure>
+    <p class="muted text-center">Bilder 33-1. Plugin-Einstellungen Googlemap</p></div>
+    <p>So sieht die Seite mit der Beschreibung vom Plugin Googlemap im Control Panel aus. Ausführliche Inormation darüber finden Sie <a href="http://tech.reumer.net/Google-Maps/Documentation-of-plugin-Googlemap/" target="_blank" rel="nofollow">auf der offiziellen Webseite</a>.</p>
+  </div>
+
+  <div id="cookies">
+    <h3>Joomla Cookie Directive Plugin</h3>
+    <div class="img-container"><figure class="img-polaroid"><img src="img/cookies-1.jpg" alt=""></figure>
+    <p class="muted text-center">Bild 34. Joomla Cookie Directive Plugin</p></div>
+    <p>Joomla Cookie Directive Plugin ist ein Plugin, das das Banner mit der Mitteilung über die Verwendung von Cookies anzeigt.</p>
+    <div class="img-container"><figure class="img-polaroid"><img src="img/cookies-2.jpg" alt=""></figure>
+    <p class="muted text-center">Bild 34-1. Plugin-Einstellungen Joomla Cookie Directive Plugin</p></div>
+    <p>So sehen die Grundeinstellungen des Plugins Joomla Cookie Directive Plugin aus. Ausführliche Inormation darüber finden Sie <a href="http://www.channeldigital.co.uk/resources/joomla-cookie-directive-plugin.html" target="_blank" rel="nofollow">auf der offiziellen Webseite</a>.</p>
+  </div>
+
+  <div id="joomgallery">
+    <h3>JoomGallery</h3>
+    <div class="img-container"><figure class="img-polaroid"><img src="img/gallery-1.jpg" alt=""></figure>
+    <p class="muted text-center">Bild 35. JoomGallery, Galerieseite</p></div>
+    <p>JoomGallery eine Komponente für die vollständige Fotogalerie auf der Basis von Joomla!</p>
+    <div class="img-container"><figure class="img-polaroid"><img src="img/gallery-2.jpg" alt=""></figure>
+    <p class="muted text-center">Bilder 35-1. JoomGallery, Kategorienseite</p></div>
+    <div class="img-container"><figure class="img-polaroid"><img src="img/gallery-3.jpg" alt=""></figure>
+    <p class="muted text-center">Bilder 35-2. JoomGallery, Slider</p></div>
+    <div class="img-container"><figure class="img-polaroid"><img src="img/gallery-4.jpg" alt=""></figure>
+    <p class="muted text-center">Bilder 35-3. JoomGallery, Seite mit der Bildbeschreibung</p></div>
+    <div class="img-container"><figure class="img-polaroid"><img src="img/gallery-5.jpg" alt=""></figure>
+    <p class="muted text-center">Bilder 35-4. Einstellungen für die Komponente JoomGallery</p></div>
+    <p>So sieht die Seite mit der Komponentenbeschreibung JoomGallery aus. Ausführliche Inormation darüber finden Sie <a href="http://www.en.joomgallery.net/documentation/" target="_blank" rel="nofollow">auf der offiziellen Webseite</a>. Damit die Komponente korrekt funktionieren kann, muss auch das Plugin JoomFancybox zusätzlich installiert werden.</p>
   </div>
 
 </section>
