--- a/index_fr.html
+++ b/index_fr.html
@@ -129,6 +129,17 @@
                           <li><a href="#komento">Komento</a></li>
                           <li><a href="#kunena">Kunena</a></li>
                           <li><a href="#tm_ajax_contact_form">Module de Formulaire de Contact en Ajax TM</a></li>
+                          <li><a href="#olark">TM Olark live chat</a></li>
+                          <li><a href="#facebook_feed">SW Facebook Display</a></li>
+                          <li><a href="#pinterest_feed">SW Pinterest Display</a></li>
+                          <li><a href="#twitter_feed">SW Twitter Display</a></li>
+                          <li><a href="#instagram_feed">TM Instagram</a></li>
+                          <li><a href="#social_login">Joomla Social Login</a></li>
+                          <li><a href="#acymailing">Acymailing</a></li>
+                          <li><a href="#tmaddthis">TM Addthis</a></li>
+                          <li><a href="#googlemap">Googlemap plugin</a></li>
+                          <li><a href="#cookies">Joomla Cookie Directive Plugin</a></li>
+                          <li><a href="#joomgallery">JoomGallery</a></li>
                         </ul>
                       </dd>
                     </dl>
@@ -1089,15 +1100,155 @@
   </div>
 
   <div id="tm_ajax_contact_form">
-<h3>Module de Formulaire de Contact en Ajax TM</h3>
-<div class="img-container"><figure class="img-polaroid"><img src="img/contact-form-1.png" alt=""></figure>
-<p class="muted text-center">Img. 23. Module de Formulaire de Contact en Ajax TM</p></div>
+    <h3>Module de Formulaire de Contact en Ajax TM</h3>
+    <div class="img-container"><figure class="img-polaroid"><img src="img/contact-form-1.png" alt=""></figure>
+    <p class="muted text-center">Img. 23. Module de Formulaire de Contact en Ajax TM</p></div>
 
-<p>Le Module de Formulaire de Contact en Ajax TM est un module de formulaire de contact en ajax pour Joomla. Ce module permet d'ajouter un formulaire de contact sur n'importe quelle page Joomla/ L'envoi de données se fait à l'aide de requêtes AJAX, la page n'est donc pas rechargée. Les paramètres du module permettent d'ajouter de la protection contre les robots (reCaptcha), de définir les champs du formulaire de contact, leurs entêtes, de définir l'adresse e-mail du destinataire, d'ajouter l'adresse CC, ainsi qu des messages d'erreur et de succès. Vous pouvez consulter la liste complète des paramètres ci-dessous.</p>
+    <p>Le Module de Formulaire de Contact en Ajax TM est un module de formulaire de contact en ajax pour Joomla. Ce module permet d'ajouter un formulaire de contact sur n'importe quelle page Joomla/ L'envoi de données se fait à l'aide de requêtes AJAX, la page n'est donc pas rechargée. Les paramètres du module permettent d'ajouter de la protection contre les robots (reCaptcha), de définir les champs du formulaire de contact, leurs entêtes, de définir l'adresse e-mail du destinataire, d'ajouter l'adresse CC, ainsi qu des messages d'erreur et de succès. Vous pouvez consulter la liste complète des paramètres ci-dessous.</p>
 
-<div class="img-container"><figure class="img-polaroid"><img src="img/contact-form-2.png" alt=""></figure>
-<p class="muted text-center">Img. 24. Paramètres du Module de Formulaire de Contact en Ajax TM</p></div>
+    <div class="img-container"><figure class="img-polaroid"><img src="img/contact-form-2.png" alt=""></figure>
+    <p class="muted text-center">Img. 24. Paramètres du Module de Formulaire de Contact en Ajax TM</p></div>
 
+</div>
+
+<div id="olark">
+  <h3>Le module du Chat en direct TM Olark</h3>
+  <div class="img-container"><figure class="img-polaroid"><img src="img/olark.jpg" alt=""></figure>
+  <p class="muted text-center">Image 25. Le module du Chat en direct TM Olark</p></div>
+  <p>TM Olark est un module du chat en direct pour Joomla.</p>
+  <div class="img-container"><figure class="img-polaroid"><img src="img/olark-2.jpg" alt=""></figure>
+  <p class="muted text-center">Image 25-1. Les paramètres du module de Chat en direct TM Olark</p></div>
+  <p>Dans les paramètres généraux, vous devez ajouter l'identificateur de site qui apparaîtra après l'inscription, et remplir tous les détails à  <a href="https://www.olark.com/install" target="_blank" rel="nofollow">https://www.olark.com/install</a></p>
+  <div class="img-container"><figure class="img-polaroid"><img src="img/olark-3.jpg" alt=""></figure>
+  <p class="muted text-center">Image 25-2. L'identificateur de site web en panneau de contrôle Olark.</p></div>
+  <p>Notre compagnie vous offre le forfait <a href="https://www.olark.com/pricing" target="_blank" rel="nofollow">"Bronze"</a> pour 6 mois gratuitement. Utilisez le suivant <a href="https://www.olark.com/signup/create_new_account/18981?utm_source=templatemonster&utm_medium=offer&utm_campaign=default" target="_blank" rel="nofollow">lien</a> de vous inscrire.</p>
+</div>
+
+<div id="facebook_feed">
+<h3>SW Facebook Display</h3>
+<div class="img-container"><figure class="img-polaroid"><img src="img/facebook_feed-1.jpg" alt=""></figure>
+<p class="muted text-center">Img. 26. Le module de SW Facebook Display</p></div>
+<p>SW Facebook Display - le module qui permet d'afficher "Facebook Like Box".</p>
+<div class="img-container"><figure class="img-polaroid"><img src="img/facebook_feed-2.jpg" alt=""></figure>
+<p class="muted text-center">Img. 26-1. Les paramètres de SW Facebook Display</p></div>
+<p>Ici vous pouvez voir les principaux paramètres de SW Facebook Display.  N'hésitez pas à vérifier pour plus de détails au <a href="http://socialwidgets.net/documentation/26-sw-facebook-display.html" target="_blank" rel="nofollow">site officiel</a>.</p>
+</div>
+
+<div id="pinterest_feed">
+<h3>SW Pinterest Display</h3>
+<div class="img-container"><figure class="img-polaroid"><img src="img/pinterest_feed-1.jpg" alt=""></figure>
+<p class="muted text-center">Img. 27. Le module de SW Pinterest Display</p></div>
+<p>SW Pinterest Display - le module qui permet d'afficher "Pinterest Conseil Widget".</p>
+<div class="img-container"><figure class="img-polaroid"><img src="img/pinterest_feed-2.jpg" alt=""></figure>
+<p class="muted text-center">Img. 27-1. Les paramètres du module de SW Pinterest Display</p></div>
+<p>Ici vous pouvez voir les principaux paramètres de SW Pinterest Display. N'hésitez pas à vérifier pour plus de détails au <a href="http://socialwidgets.net/documentation/28-sw-pinterest-display.html" target="_blank" rel="nofollow">site officiel</a>.</p>
+</div>
+
+<div id="twitter_feed">
+<h3>SW Twitter Display</h3>
+<div class="img-container"><figure class="img-polaroid"><img src="img/twitter_feed-1.jpg" alt=""></figure>
+<p class="muted text-center">Img. 28. Le module de SW Twitter Display</p></div>
+<p>SW Twitter Display - le module qui permet d'afficher "Twitter Widget".</p>
+<div class="img-container"><figure class="img-polaroid"><img src="img/twitter_feed-2.jpg" alt=""></figure>
+<p class="muted text-center">Img. 28-1. Les paramètres du module de SW Twitter Display</p></div>
+<p>Ici vous pouvez voir les principaux paramètres SW Twitter Display. N'hésitez pas à vérifier pour plus de détails au <a href="http://socialwidgets.net/documentation/27-sw-twitter-display.html" target="_blank" rel="nofollow">site officiel</a>.</p>
+</div>
+
+<div id="instagram_feed">
+<h3>TM Instagram</h3>
+<div class="img-container"><figure class="img-polaroid"><img src="img/instagram-1.jpg" alt=""></figure>
+<p class="muted text-center">Img. 29. Le module de TM Instagram</p></div>
+<p>TM Instagram - le module qui permet d'afficher "Instagram Widget"</p>
+<div class="img-container"><figure class="img-polaroid"><img src="img/instagram-2.jpg" alt=""></figure>
+<p class="muted text-center">Img. 29-1. Les paramètres du module de TM Instagram</p></div>
+<p>Ici vous pouvez voir les principaux paramètres de TM Instagram. Entrez le nom du profil d'Instagram dans le champ Nom d'utilisateur d'Instagram, entrez le numéro désiré d'images dans le champ Nombre de photos, définissez l'ID de votre application d'Instagram dans le champ appelé Votre d'Instagram CLIENT ID. Afin d'obtenir l'ID, suivez le lien <a href="https://instagram.com/accounts/login/?next=%2Fdeveloper%2F" target="_blank" rel="nofollow">https://instagram.com/accounts/login/?next=%2Fdeveloper%2F</a> où vous devez créer un compte. Ensuite, suivez ce lien <a href="http://instagram.com/developer/clients/manage/" target="_blank" rel="nofollow">http://instagram.com/developer/clients/manage/</a> et créez l'application. Après cela vous obtiendrez vos données d'applications où vous verrez l'ID client.</p>
+</div>
+
+<div id="social_login">
+<h3>Joomla Social Login</h3>
+<div class="img-container"><figure class="img-polaroid"><img src="img/sociallogin-1.jpg" alt=""></figure>
+<p class="muted text-center">Img. 30. Le composant de Joomla Social Login</p></div>
+<p>Joomla Social Login - le composant qui permet d'afficher les boutons de connexion aux comptes de réseaux sociaux.</p>
+<div class="img-container"><figure class="img-polaroid"><img src="img/sociallogin-2.jpg" alt=""></figure>
+<p class="muted text-center">Img. 30-1. Les paramètres de Joomla Social Login</p></div>
+<p>Ici vous pouvez voir les principaux paramètres de Joomla Social Login. N'hésitez pas à vérifier pour plus de détails au <a href="http://support.loginradius.com/hc/en-us/articles/201968987-Joomla-Social-Login-instructions" target="_blank" rel="nofollow">site officiel</a>.</p>
+</div>
+
+<div id="acymailing">
+<h3>Acymailing</h3>
+<div class="img-container"><figure class="img-polaroid"><img src="img/acymailing-1.jpg" alt=""></figure>
+<p class="muted text-center">Img. 31. Le composant de Acymailing</p></div>
+<p>Acymailing - le composant de souscription pour Joomla!</p>
+<div class="img-container"><figure class="img-polaroid"><img src="img/acymailing-2.jpg" alt=""></figure>
+<p class="muted text-center">Img. 31-1. Les paramètres de Acymailing</p></div>
+<p>Voici la page principale de composant AcyMailing dans le panneau d'administration. N'hésitez pas à vérifier pour plus de détails au <a href="https://www.acyba.com/acymailing/doc.html" target="_blank" rel="nofollow">site officiel</a>.</p>
+<div class="img-container"><figure class="img-polaroid"><img src="img/acymailing-3.jpg" alt=""></figure>
+<p class="muted text-center">Img. 31-2. Les paramètres de Acymailing</p></div>
+<p>C'est la page des paramètres du module AcyMailing. N'hésitez pas à vérifier pour plus de détails au <a href="https://www.acyba.com/acymailing/62-acymailing-module.html" target="_blank" rel="nofollow">site officiel</a>.</p>
+<p>C'est la liste des plugins de système qui sont installés se avec le composant AcyMailing:</p>
+<ul>
+<li>plg_acymailing_contentplugin</li>
+<li>plg_acymailing_managetext</li>
+<li>plg_acymailing_online</li>
+<li>plg_acymailing_share</li>
+<li>plg_acymailing_stats</li>
+<li>plg_acymailing_tablecontents</li>
+<li>plg_acymailing_tagcbuser</li>
+<li>plg_acymailing_tagcontent</li>
+<li>plg_acymailing_tagsubscriber</li>
+<li>plg_acymailing_tagsubscription</li>
+<li>plg_acymailing_tagtime</li>
+<li>plg_acymailing_taguser</li>
+<li>plg_acymailing_template</li>
+<li>plg_editors_acyeditor</li>
+<li>plg_system_regacymailing</li>
+</ul>
+</div>
+
+<div id="tmaddthis">
+<h3>TM Addthis</h3>
+<div class="img-container"><figure class="img-polaroid"><img src="img/addthis-1.jpg" alt=""></figure>
+<p class="muted text-center">Img. 32. Le plugin de TM Addthis</p></div>
+<p>TM Addthis - les plugins qui permettent d'afficher les boutons de partage social(«partager»).</p>
+<div class="img-container"><figure class="img-polaroid"><img src="img/addthis-2.jpg" alt=""></figure>
+<p class="muted text-center">Img. 32-1. Les paramètres de TM Addthis</p></div>
+<p>Ici vous pouvez voir les principaux paramètres du plugin TM Addthis. Entrez l'ID de votre profil dans le champ de profil ID. Afin d'obtenir l'ID de profil, vous devez vous inscrire et créer le profil à la page suivante <a href="https://www.addthis.com/settings/publisher" target="_blank" rel="nofollow">https://www.addthis.com/settings/publisher</a>.</p>
+</div>
+
+<div id="googlemap">
+<h3>Googlemap plugin</h3>
+<div class="img-container"><figure class="img-polaroid"><img src="img/googlemap-1.jpg" alt=""></figure>
+<p class="muted text-center">Img. 33. Le plugin de Googlemap</p></div>
+<p>Googlemap - le plugin qui permet d'afficher la carte Google.</p>
+<div class="img-container"><figure class="img-polaroid"><img src="img/googlemap-2.jpg" alt=""></figure>
+<p class="muted text-center">Img. 33-1. Les paramètres de Googlemap</p></div>
+<p>Voici la page principale de Googlemap plugin dans le panneau d'administration. N'hésitez pas à vérifier pour plus de détails au <a href="http://tech.reumer.net/Google-Maps/Documentation-of-plugin-Googlemap/" target="_blank" rel="nofollow">site officiel</a>.</p>
+</div>
+
+<div id="cookies">
+<h3>Joomla Cookie Directive Plugin</h3>
+<div class="img-container"><figure class="img-polaroid"><img src="img/cookies-1.jpg" alt=""></figure>
+<p class="muted text-center">Img. 34. Le plugin de Joomla Cookie Directive</p></div>
+<p>Joomla Cookie Directive Plugin - le plugin qui permet d'afficher la bannière contenant un message sur l'utilisation de cookies.</p>
+<div class="img-container"><figure class="img-polaroid"><img src="img/cookies-2.jpg" alt=""></figure>
+<p class="muted text-center">Img. 34-1. Les paramètres du plugin de Joomla Cookie Directive</p></div>
+<p>Ici vous pouvez voir les principaux paramètres de Joomla Cookie Directive Plugin.  N'hésitez pas à vérifier pour plus de détails au <a href="http://www.channeldigital.co.uk/resources/joomla-cookie-directive-plugin.html" target="_blank" rel="nofollow">site officiel</a>.</p>
+</div>
+
+<div id="joomgallery">
+<h3>JoomGallery</h3>
+<div class="img-container"><figure class="img-polaroid"><img src="img/gallery-1.jpg" alt=""></figure>
+<p class="muted text-center">Img. 35. JoomGallery, la page de galerie</p></div>
+<p>JoomGallery - le composant qui permet de créer une galerie de photos complète basée sur Joomla!</p>
+<div class="img-container"><figure class="img-polaroid"><img src="img/gallery-2.jpg" alt=""></figure>
+<p class="muted text-center">Img. 35-1. JoomGallery, la page de galerie</p></div>
+<div class="img-container"><figure class="img-polaroid"><img src="img/gallery-3.jpg" alt=""></figure>
+<p class="muted text-center">Img. 35-2. JoomGallery, le slider</p></div>
+<div class="img-container"><figure class="img-polaroid"><img src="img/gallery-4.jpg" alt=""></figure>
+<p class="muted text-center">Img. 35-3. JoomGallery, la page de la représentation d'image</p></div>
+<div class="img-container"><figure class="img-polaroid"><img src="img/gallery-5.jpg" alt=""></figure>
+<p class="muted text-center">Img. 35-4. Les paramètres de JoomGallery</p></div>
+<p>Voici la page principale du composant de JoomGallery.  N'hésitez pas à vérifier pour plus de détails au <a href="http://www.en.joomgallery.net/documentation/" target="_blank" rel="nofollow">site officiel</a>. En outre, il existe le plugin JoomFancybox qui doit être installé afin de travailler avec le composant.</p>
 </div>
 
 </section>
