--- a/index_it.html
+++ b/index_it.html
@@ -129,6 +129,17 @@
                           <li><a href="#komento">Komento</a></li>
                           <li><a href="#kunena">Kunena</a></li>
                           <li><a href="#tm_ajax_contact_form">Modulo Contatti TM Ajax</a></li>
+                          <li><a href="#olark">TM Olark live chat</a></li>
+                          <li><a href="#facebook_feed">SW Facebook Display</a></li>
+                          <li><a href="#pinterest_feed">SW Pinterest Display</a></li>
+                          <li><a href="#twitter_feed">SW Twitter Display</a></li>
+                          <li><a href="#instagram_feed">TM Instagram</a></li>
+                          <li><a href="#social_login">Joomla Social Login</a></li>
+                          <li><a href="#acymailing">Acymailing</a></li>
+                          <li><a href="#tmaddthis">TM Addthis</a></li>
+                          <li><a href="#googlemap">Googlemap plugin</a></li>
+                          <li><a href="#cookies">Joomla Cookie Directive Plugin</a></li>
+                          <li><a href="#joomgallery">JoomGallery</a></li>
                         </ul>
                       </dd>
                     </dl>
@@ -1097,6 +1108,146 @@
 <div class="img-container"><figure class="img-polaroid"><img src="img/contact-form-2.png" alt=""></figure>
 <p class="muted text-center">Imm. 24. Impostazioni Modulo Contatti TM Ajax</p></div>
 
+</div>
+
+<div id="olark">
+  <h3>Modulo live chat TM Olark</h3>
+  <div class="img-container"><figure class="img-polaroid"><img src="img/olark.jpg" alt=""></figure>
+  <p class="muted text-center">Immagine 25. Modulo live chat TM Olark </p></div>
+  <p>TM Olark è un modulo di chat dal vivo per Joomla.</p>
+  <div class="img-container"><figure class="img-polaroid"><img src="img/olark-2.jpg" alt=""></figure>
+  <p class="muted text-center">Immagine 25-1. Impostazioni del modulo live chat TM Olark </p></div>
+  <p>Nelle impostazioni generali, devi aggiungere l'identificativo del sito web che apparirà dopo la registrazione, e compilare tutte le informazioni su <a href="https://www.olark.com/install" target="_blank" rel="nofollow">https://www.olark.com/install</a></p>
+  <div class="img-container"><figure class="img-polaroid"><img src="img/olark-3.jpg" alt=""></figure>
+  <p class="muted text-center">Immagine 25-2. Identificativo sito web nel pannello di controllo di Olark.</p></div>
+  <p>La nostra azienda vi offre il pacchetto <a href="https://www.olark.com/pricing" target="_blank" rel="nofollow">"Bronze"</a> gratis per 6 mesi. Usa il seguente <a href="https://www.olark.com/signup/create_new_account/18981?utm_source=templatemonster&utm_medium=offer&utm_campaign=default" target="_blank" rel="nofollow">link</a> per registrarti.</p>
+</div>
+
+<div id="facebook_feed">
+<h3>SW Facebook Display</h3>
+<div class="img-container"><figure class="img-polaroid"><img src="img/facebook_feed-1.jpg" alt=""></figure>
+<p class="muted text-center">Imm. 26. Modulo SW Facebook Display</p></div>
+<p>SW Facebook Display - un modulo che ti consente di inserire una casella Mi Piace per Facebook.</p>
+<div class="img-container"><figure class="img-polaroid"><img src="img/facebook_feed-2.jpg" alt=""></figure>
+<p class="muted text-center">Imm. 26-1. Impostazioni modulo SW Facebook Display</p></div>
+<p>Qui troverai le impostazioni principali di SW Facebook Display. Puoi approfondire visitando il <a href="http://socialwidgets.net/documentation/26-sw-facebook-display.html" target="_blank" rel="nofollow">sito ufficiale</a>.</p>
+</div>
+
+<div id="pinterest_feed">
+<h3>SW Pinterest Display</h3>
+<div class="img-container"><figure class="img-polaroid"><img src="img/pinterest_feed-1.jpg" alt=""></figure>
+<p class="muted text-center">Imm. 27. Modulo SW Pinterest Display</p></div>
+<p>SW Pinterest Display - modulo che ti consente di inserire un widget Pinterest Board.</p>
+<div class="img-container"><figure class="img-polaroid"><img src="img/pinterest_feed-2.jpg" alt=""></figure>
+<p class="muted text-center">Imm. 27-1. Impostazioni modulo SW Pinterest Display</p></div>
+<p>Qui troverai le impostazioni principali di SW Pinterest Display. Puoi approfondire visitando il <a href="http://socialwidgets.net/documentation/28-sw-pinterest-display.html" target="_blank" rel="nofollow">sito ufficiale</a>.</p>
+</div>
+
+<div id="twitter_feed">
+<h3>SW Twitter Display</h3>
+<div class="img-container"><figure class="img-polaroid"><img src="img/twitter_feed-1.jpg" alt=""></figure>
+<p class="muted text-center">Imm. 28. modulo SW Twitter Display</p></div>
+<p>SW Twitter Display - modulo che ti consente di inserire un "Twitter Widget".</p>
+<div class="img-container"><figure class="img-polaroid"><img src="img/twitter_feed-2.jpg" alt=""></figure>
+<p class="muted text-center">Img. 28-1. impostazioni modulo SW Twitter Display</p></div>
+<p>Qui puoi trovare le impostazioni principali di SW Twitter Display. Puoi approfondire visitando il <a href="http://socialwidgets.net/documentation/27-sw-twitter-display.html" target="_blank" rel="nofollow">sito ufficiale</a>.</p>
+</div>
+
+<div id="instagram_feed">
+<h3>TM Instagram</h3>
+<div class="img-container"><figure class="img-polaroid"><img src="img/instagram-1.jpg" alt=""></figure>
+<p class="muted text-center">Imm. 29. modulo TM Instagram </p></div>
+<p>TM Instagram -  modulo che ti consente di inserire "Instagram Widget"</p>
+<div class="img-container"><figure class="img-polaroid"><img src="img/instagram-2.jpg" alt=""></figure>
+<p class="muted text-center">Imm. 29-1.impostazioni modulo TM Instagram</p></div>
+<p>Qui puoi trovare le impostazioni principali di TM Instagram. Inserisci il nome del tuo profilo Instagram nel campo nome utente Instagram (username), inserisci il numero di immagini desiderato nel campo 'Number of photos', imposta l'ID della tua applicazione Instagram nel campo 'Your Instagram CLIENT ID'. Per ottenere l'ID, segui il link <a href="https://instagram.com/accounts/login/?next=%2Fdeveloper%2F" target="_blank" rel="nofollow">https://instagram.com/accounts/login/?next=%2Fdeveloper%2F</a> dove dovrai registrare un account. Poi segui questo link <a href="http://instagram.com/developer/clients/manage/" target="_blank" rel="nofollow">http://instagram.com/developer/clients/manage/</a> e crea l'applicazione. Fatto ciò otterrai i tuoi dati applicazione, dove vedrai il CLIENT ID.</p>
+</div>
+
+<div id="social_login">
+<h3>Joomla Social Login</h3>
+<div class="img-container"><figure class="img-polaroid"><img src="img/sociallogin-1.jpg" alt=""></figure>
+<p class="muted text-center">Imm. 30. componente Joomla Social Login</p></div>
+<p>Joomla Social Login - componente che ti consente di inserire i pulsanti di login agli account social.</p>
+<div class="img-container"><figure class="img-polaroid"><img src="img/sociallogin-2.jpg" alt=""></figure>
+<p class="muted text-center">Imm. 30-1. impostazioni Joomla Social Login</p></div>
+<p>Qui puoi trovare le impostazioni principali di Joomla Social Login. Puoi approfondire visitando il <a href="http://support.loginradius.com/hc/en-us/articles/201968987-Joomla-Social-Login-instructions" target="_blank" rel="nofollow">sito ufficiale</a>.</p>
+</div>
+
+<div id="acymailing">
+<h3>Acymailing</h3>
+<div class="img-container"><figure class="img-polaroid"><img src="img/acymailing-1.jpg" alt=""></figure>
+<p class="muted text-center">Imm. 31. componente Acymailing</p></div>
+<p>Acymailing - la componente di iscrizione per Joomla!</p>
+<div class="img-container"><figure class="img-polaroid"><img src="img/acymailing-2.jpg" alt=""></figure>
+<p class="muted text-center">Imm. 31-1. impostazioni Acymailing</p></div>
+<p>Questa è la pagina principale della componente Acymailing nel pannello di amministrazione. Puoi approfondire visitando il <a href="https://www.acyba.com/acymailing/doc.html" target="_blank" rel="nofollow">sito ufficiale</a>.</p>
+<div class="img-container"><figure class="img-polaroid"><img src="img/acymailing-3.jpg" alt=""></figure>
+<p class="muted text-center">Imm. 31-2. impostazioni Acymailing</p></div>
+<p>Questa è la pagina delle impostazioni del modulo Acymailing. Puoi approfondire visitando il <a href="https://www.acyba.com/acymailing/62-acymailing-module.html" target="_blank" rel="nofollow">sito ufficiale</a>.</p>
+<p>Questa è la lista dei plugin di sistema che verranno installati insieme con la componente Acymailing:</p>
+<ul>
+<li>plg_acymailing_contentplugin</li>
+<li>plg_acymailing_managetext</li>
+<li>plg_acymailing_online</li>
+<li>plg_acymailing_share</li>
+<li>plg_acymailing_stats</li>
+<li>plg_acymailing_tablecontents</li>
+<li>plg_acymailing_tagcbuser</li>
+<li>plg_acymailing_tagcontent</li>
+<li>plg_acymailing_tagsubscriber</li>
+<li>plg_acymailing_tagsubscription</li>
+<li>plg_acymailing_tagtime</li>
+<li>plg_acymailing_taguser</li>
+<li>plg_acymailing_template</li>
+<li>plg_editors_acyeditor</li>
+<li>plg_system_regacymailing</li>
+</ul>
+</div>
+
+<div id="tmaddthis">
+<h3>TM Addthis</h3>
+<div class="img-container"><figure class="img-polaroid"><img src="img/addthis-1.jpg" alt=""></figure>
+<p class="muted text-center">Imm. 32. plugin TM Addthis</p></div>
+<p>TM Addthis - plugin che ti permette di inserire pulsanti 'condividi' per i social network.</p>
+<div class="img-container"><figure class="img-polaroid"><img src="img/addthis-2.jpg" alt=""></figure>
+<p class="muted text-center">Imm. 32-1. Impostazioni TM Addthis</p></div>
+<p>Qui puoi trovare le impostazioni principali di TM Addthis plugin. Inserisci l'ID del tuo profilo nel campo 'profile ID'. Per poter ottenere l'ID del profilo dovrai registrare un account e creare il profilo sulla pagina seguente <a href="https://www.addthis.com/settings/publisher" target="_blank" rel="nofollow">https://www.addthis.com/settings/publisher</a>.</p>
+</div>
+
+<div id="googlemap">
+<h3>plugin Googlemap</h3>
+<div class="img-container"><figure class="img-polaroid"><img src="img/googlemap-1.jpg" alt=""></figure>
+<p class="muted text-center">Imm. 33. plugin Googlemap</p></div>
+<p>Googlemap - plugin che ti consente di inserire mappe di Google.</p>
+<div class="img-container"><figure class="img-polaroid"><img src="img/googlemap-2.jpg" alt=""></figure>
+<p class="muted text-center">Imm. 33-1. impostazioni Googlemap</p></div>
+<p>Questa è la pagina principal del plugin Googlemap nel pannello di amministrazione. Puoi approfondire visitando il <a href="http://tech.reumer.net/Google-Maps/Documentation-of-plugin-Googlemap/" target="_blank" rel="nofollow">sito ufficiale</a>.</p>
+</div>
+
+<div id="cookies">
+<h3>Joomla Cookie Directive Plugin</h3>
+<div class="img-container"><figure class="img-polaroid"><img src="img/cookies-1.jpg" alt=""></figure>
+<p class="muted text-center">Imm. 34. Joomla Cookie Directive Plugin</p></div>
+<p>Joomla Cookie Directive Plugin - plugin che ti consente di inserire un banner contenente un messaggio sull'utilizzo dei cookie.</p>
+<div class="img-container"><figure class="img-polaroid"><img src="img/cookies-2.jpg" alt=""></figure>
+<p class="muted text-center">Imm. 34-1. Impostazioni Joomla Cookie Directive Plugin</p></div>
+<p>Qui puoi trovare le impostazioni principali di Joomla Cookie Directive Plugin.  Puoi approfondire visitando il <a href="http://www.channeldigital.co.uk/resources/joomla-cookie-directive-plugin.html" target="_blank" rel="nofollow">sito ufficiale</a>.</p>
+</div>
+
+<div id="joomgallery">
+<h3>JoomGallery</h3>
+<div class="img-container"><figure class="img-polaroid"><img src="img/gallery-1.jpg" alt=""></figure>
+<p class="muted text-center">Imm. 35. pagina galleria JoomGallery</p></div>
+<p>JoomGallery - componente che ti permette di creare una fotogalleria completa basata su Joomla!</p>
+<div class="img-container"><figure class="img-polaroid"><img src="img/gallery-2.jpg" alt=""></figure>
+<p class="muted text-center">Imm. 35-1. pagina categoria JoomGallery</p></div>
+<div class="img-container"><figure class="img-polaroid"><img src="img/gallery-3.jpg" alt=""></figure>
+<p class="muted text-center">Imm. 35-2. slider JoomGallery</p></div>
+<div class="img-container"><figure class="img-polaroid"><img src="img/gallery-4.jpg" alt=""></figure>
+<p class="muted text-center">Imm 35-3. pagina descrizione immagine JoomGallery</p></div>
+<div class="img-container"><figure class="img-polaroid"><img src="img/gallery-5.jpg" alt=""></figure>
+<p class="muted text-center">Imm. 35-4. impostazioni JoomGallery</p></div>
+<p>Questa è la pagina principale della componente JoomGallery component. Puoi approfondire visitando il <a href="http://www.en.joomgallery.net/documentation/" target="_blank" rel="nofollow">sito ufficiale</a>. C'è inoltre un plugin, JoomFancybox, che deve essere insallato per poter lavorare con la componente.</p>
 </div>
 
 </section>
