--- a/index_pt.html
+++ b/index_pt.html
@@ -129,6 +129,17 @@
                           <li><a href="#komento">Komento</a></li>
                           <li><a href="#kunena">Kunena</a></li>
                           <li><a href="#tm_ajax_contact_form">Módulo de Formulário de Contato TM Ajax</a></li>
+                          <li><a href="#olark">TM Olark live chat</a></li>
+                          <li><a href="#facebook_feed">SW Facebook Display</a></li>
+                          <li><a href="#pinterest_feed">SW Pinterest Display</a></li>
+                          <li><a href="#twitter_feed">SW Twitter Display</a></li>
+                          <li><a href="#instagram_feed">TM Instagram</a></li>
+                          <li><a href="#social_login">Joomla Social Login</a></li>
+                          <li><a href="#acymailing">Acymailing</a></li>
+                          <li><a href="#tmaddthis">TM Addthis</a></li>
+                          <li><a href="#googlemap">Googlemap plugin</a></li>
+                          <li><a href="#cookies">Joomla Cookie Directive Plugin</a></li>
+                          <li><a href="#joomgallery">JoomGallery</a></li>
                         </ul>
                       </dd>
                     </dl>
@@ -1114,6 +1125,146 @@ O Formulário de Contato TM Ajax é um módulo de formulário para a engine do J
 <div class="img-container"><figure class="img-polaroid"><img src="img/contact-form-2.png" alt=""></figure>
 <p class="muted text-center">Img. 24.Configurações do módulo TM Ajax</p></div>
 
+</div>
+
+<div id="olark">
+  <h3>Módulo de Bate-Papo TM Olark</h3>
+  <div class="img-container"><figure class="img-polaroid"><img src="img/olark.jpg" alt=""></figure>
+  <p class="muted text-center">Imagem 25. Módulo de Bate-Papo TM Olark</p></div>
+  <p>TM Olark é um módulo de bate-papo em tempo real para o Joomla.</p>
+  <div class="img-container"><figure class="img-polaroid"><img src="img/olark-2.jpg" alt=""></figure>
+  <p class="muted text-center">Image 25-1. Configurações do módulo de bate-papo TM Olark</p></div>
+  <p>Em configurações gerais (general settings) você deve adicionar o identificador do site que vai aparecer após o cadastro e preenchimento de todos os detalhes em <a href="https://www.olark.com/install" target="_blank" rel="nofollow">https://www.olark.com/install</a></p>
+  <div class="img-container"><figure class="img-polaroid"><img src="img/olark-3.jpg" alt=""></figure>
+  <p class="muted text-center">Image 25-2. Painel de controle do Olark, Identificador de Website (Website Identifier).</p></div>
+  <p>Nossa empresa lhe fornece um pacote <a href="https://www.olark.com/pricing" target="_blank" rel="nofollow">"Bronze"</a> gratuito por 6 meses. Use o seguinte <a href="https://www.olark.com/signup/create_new_account/18981?utm_source=templatemonster&utm_medium=offer&utm_campaign=default" target="_blank" rel="nofollow">link</a> para se cadastrar.</p>
+</div>
+
+<div id="facebook_feed">
+<h3>SW Facebook Display</h3>
+<div class="img-container"><figure class="img-polaroid"><img src="img/facebook_feed-1.jpg" alt=""></figure>
+<p class="muted text-center">Img. 26. SW Facebook Display module</p></div>
+<p>SW Facebook Display - módulo que permite mostrar a "Like Box do Facebook".</p>
+<div class="img-container"><figure class="img-polaroid"><img src="img/facebook_feed-2.jpg" alt=""></figure>
+<p class="muted text-center">Img. 26-1. Configurações do módulo SW Facebook Display</p></div>
+<p>Aqui você pode ver as configurações principai do SW Facebook Display. Você pode encontrar mais detalhes no <a href="http://socialwidgets.net/documentation/26-sw-facebook-display.html" target="_blank" rel="nofollow">site oficial</a>.</p>
+</div>
+
+<div id="pinterest_feed">
+<h3>SW Pinterest Display</h3>
+<div class="img-container"><figure class="img-polaroid"><img src="img/pinterest_feed-1.jpg" alt=""></figure>
+<p class="muted text-center">Img. 27. Módulo SW Pinterest Display</p></div>
+<p>SW Pinterest Display - módulo que permite mostrar o "Pinterest Board Widget".</p>
+<div class="img-container"><figure class="img-polaroid"><img src="img/pinterest_feed-2.jpg" alt=""></figure>
+<p class="muted text-center">Img. 27-1. Configurações do Módulo SW Pinterest Display</p></div>
+<p>Aqui você pode ver as configurações principais do SW Pinterest Display. Você pode saber mais no <a href="http://socialwidgets.net/documentation/28-sw-pinterest-display.html" target="_blank" rel="nofollow">site oficial</a>.</p>
+</div>
+
+<div id="twitter_feed">
+<h3>SW Twitter Display</h3>
+<div class="img-container"><figure class="img-polaroid"><img src="img/twitter_feed-1.jpg" alt=""></figure>
+<p class="muted text-center">Img. 28. Módulo SW Twitter Display</p></div>
+<p>SW Twitter Display - módulo que permite mostrar o "Twitter Widget".</p>
+<div class="img-container"><figure class="img-polaroid"><img src="img/twitter_feed-2.jpg" alt=""></figure>
+<p class="muted text-center">Img. 28-1. SW Twitter Display configurações do módulo</p></div>
+<p>Aqui você pode ver as configurações principais do SW Twitter Display. Você pode saber mais no <a href="http://socialwidgets.net/documentation/27-sw-twitter-display.html" target="_blank" rel="nofollow">site oficial</a>.</p>
+</div>
+
+<div id="instagram_feed">
+<h3>TM Instagram</h3>
+<div class="img-container"><figure class="img-polaroid"><img src="img/instagram-1.jpg" alt=""></figure>
+<p class="muted text-center">Img. 29.  TM Instagram module</p></div>
+<p>TM Instagram -  módulo que permite mostrar o "Instagram Widget"</p>
+<div class="img-container"><figure class="img-polaroid"><img src="img/instagram-2.jpg" alt=""></figure>
+<p class="muted text-center">Img. 29-1.TM Instagram configurações do módulo</p></div>
+<p>Aqui você pode ver as configurações principais do TM Instagram. Coloque o nome do perfil do Instagram no campo "username", o número de fotos desejadas em "Number of photos", inclua o número de identificação (ID) da sua aplicação do Instagram no campo chamado "Your Instagram CLIENT ID". Para conseguir este número, siga o link <a href="https://instagram.com/accounts/login/?next=%2Fdeveloper%2F" target="_blank" rel="nofollow">https://instagram.com/accounts/login/?next=%2Fdeveloper%2F</a> onde você precisará cadastrar uma conta. Então, siga para <a href="http://instagram.com/developer/clients/manage/" target="_blank" rel="nofollow">http://instagram.com/developer/clients/manage/</a> e crie a aplicação. Depois disso você receberá os dados da sua aplicação, e seu CLIENT ID.</p>
+</div>
+
+<div id="social_login">
+<h3>Joomla Social Login</h3>
+<div class="img-container"><figure class="img-polaroid"><img src="img/sociallogin-1.jpg" alt=""></figure>
+<p class="muted text-center">Img. 30. Componente de login social do Joomla</p></div>
+<p>Joomla Social Login - componente que permite mostrar botões de login de redes sociais.</p>
+<div class="img-container"><figure class="img-polaroid"><img src="img/sociallogin-2.jpg" alt=""></figure>
+<p class="muted text-center">Img. 30-1. Configurações do Joomla Social Login</p></div>
+<p>Aqui você pode ver as configurações principais do Joomla Social Login. Você pode saber mais no <a href="http://support.loginradius.com/hc/en-us/articles/201968987-Joomla-Social-Login-instructions" target="_blank" rel="nofollow">site oficial</a>.</p>
+</div>
+
+<div id="acymailing">
+<h3>Acymailing</h3>
+<div class="img-container"><figure class="img-polaroid"><img src="img/acymailing-1.jpg" alt=""></figure>
+<p class="muted text-center">Img. 31. Componente Acymailing </p></div>
+<p>Acymailing - o componente de assinatura para o Joomla!</p>
+<div class="img-container"><figure class="img-polaroid"><img src="img/acymailing-2.jpg" alt=""></figure>
+<p class="muted text-center">Img. 31-1. Configurações do Acymailing</p></div>
+<p>Eis a página principal do componente do Acymailing no painel administrativo. Você pode saber mais no <a href="https://www.acyba.com/acymailing/doc.html" target="_blank" rel="nofollow">site oficial</a>.</p>
+<div class="img-container"><figure class="img-polaroid"><img src="img/acymailing-3.jpg" alt=""></figure>
+<p class="muted text-center">Img. 31-2. Configurações do Acymailing</p></div>
+<p>Essa é a página de configuração do módulo  Acymailing. Você pode saber mais no <a href="https://www.acyba.com/acymailing/62-acymailing-module.html" target="_blank" rel="nofollow">site oficial</a>.</p>
+<p>Segue a lista de plugins que são instalados junto do componente Acymailing:</p>
+<ul>
+<li>plg_acymailing_contentplugin</li>
+<li>plg_acymailing_managetext</li>
+<li>plg_acymailing_online</li>
+<li>plg_acymailing_share</li>
+<li>plg_acymailing_stats</li>
+<li>plg_acymailing_tablecontents</li>
+<li>plg_acymailing_tagcbuser</li>
+<li>plg_acymailing_tagcontent</li>
+<li>plg_acymailing_tagsubscriber</li>
+<li>plg_acymailing_tagsubscription</li>
+<li>plg_acymailing_tagtime</li>
+<li>plg_acymailing_taguser</li>
+<li>plg_acymailing_template</li>
+<li>plg_editors_acyeditor</li>
+<li>plg_system_regacymailing</li>
+</ul>
+</div>
+
+<div id="tmaddthis">
+<h3>TM Addthis</h3>
+<div class="img-container"><figure class="img-polaroid"><img src="img/addthis-1.jpg" alt=""></figure>
+<p class="muted text-center">Img. 32. plugin do TM Addthis</p></div>
+<p>TM Addthis - plugins que te permitem mostrar o botões de compartilhamento.</p>
+<div class="img-container"><figure class="img-polaroid"><img src="img/addthis-2.jpg" alt=""></figure>
+<p class="muted text-center">Img. 32-1. Configurações TM Addthis</p></div>
+<p>Aqui você pode ver as configurações principais do plugin TM Addthis. Coloque o número ID do seu perfil no campo "profile ID". Para conseguir um número de perfil, você precisa se cadastrar e criar um perfil em <a href="https://www.addthis.com/settings/publisher" target="_blank" rel="nofollow">https://www.addthis.com/settings/publisher</a>.</p>
+</div>
+
+<div id="googlemap">
+<h3>Googlemap plugin</h3>
+<div class="img-container"><figure class="img-polaroid"><img src="img/googlemap-1.jpg" alt=""></figure>
+<p class="muted text-center">Img. 33. Plugin do Googlemap</p></div>
+<p>Googlemap - plugin que te permite mostrar mapas do Google.</p>
+<div class="img-container"><figure class="img-polaroid"><img src="img/googlemap-2.jpg" alt=""></figure>
+<p class="muted text-center">Img. 33-1. Configurações do Googlemap</p></div>
+<p>Página principal do painel administrativo.  Você pode saber mais no <a href="http://tech.reumer.net/Google-Maps/Documentation-of-plugin-Googlemap/" target="_blank" rel="nofollow">site oficial</a>.</p>
+</div>
+
+<div id="cookies">
+<h3>Joomla Cookie Directive Plugin</h3>
+<div class="img-container"><figure class="img-polaroid"><img src="img/cookies-1.jpg" alt=""></figure>
+<p class="muted text-center">Img. 34. Plugin de diretivas de Cookies do Joomla</p></div>
+<p>Joomla Cookie Directive Plugin - plugin que te permite mostrar um banner com uma mensagem sobre o uso de cookies.</p>
+<div class="img-container"><figure class="img-polaroid"><img src="img/cookies-2.jpg" alt=""></figure>
+<p class="muted text-center">Img. 34-1. Configurações do Joomla Cookie Directive Plugin </p></div>
+<p>Aqui você pode ver as configurações principais do Joomla Cookie Directive Plugin settings.  Você pode saber mais no <a href="http://www.channeldigital.co.uk/resources/joomla-cookie-directive-plugin.html" target="_blank" rel="nofollow">site oficial</a>.</p>
+</div>
+
+<div id="joomgallery">
+<h3>JoomGallery</h3>
+<div class="img-container"><figure class="img-polaroid"><img src="img/gallery-1.jpg" alt=""></figure>
+<p class="muted text-center">Img. 35. Página de galeria do JoomGallery</p></div>
+<p>JoomGallery - componente que te permite criar uma fotogaleria completa no Joomla!</p>
+<div class="img-container"><figure class="img-polaroid"><img src="img/gallery-2.jpg" alt=""></figure>
+<p class="muted text-center">Img. 35-1. Página de categoria do JoomGallery</p></div>
+<div class="img-container"><figure class="img-polaroid"><img src="img/gallery-3.jpg" alt=""></figure>
+<p class="muted text-center">Img. 35-2. Slider do JoomGallery</p></div>
+<div class="img-container"><figure class="img-polaroid"><img src="img/gallery-4.jpg" alt=""></figure>
+<p class="muted text-center">Img. 35-3. Página de descrição da imagem do JoomGallery</p></div>
+<div class="img-container"><figure class="img-polaroid"><img src="img/gallery-5.jpg" alt=""></figure>
+<p class="muted text-center">Img. 35-4. Configurações do JoomGallery</p></div>
+<p>Essa é a página principal do componente JoomGallery. Você pode saber mais no <a href="http://www.en.joomgallery.net/documentation/" target="_blank" rel="nofollow">site oficial</a>. Além disso, tem um plugin do JoomFancybox que precisa ser instalado para funcionar com o componente.</p>
 </div>
 
 </section>
