--- a/index_es.html
+++ b/index_es.html
@@ -130,6 +130,17 @@
                           <li><a href="#komento">Komento</a></li>
                           <li><a href="#kunena">Kunena</a></li>
                           <li><a href="#tm_ajax_contact_form">Módulo TM Ajax Contact Form</a></li>
+                          <li><a href="#olark">TM Olark live chat</a></li>
+                          <li><a href="#facebook_feed">SW Facebook Display</a></li>
+                          <li><a href="#pinterest_feed">SW Pinterest Display</a></li>
+                          <li><a href="#twitter_feed">SW Twitter Display</a></li>
+                          <li><a href="#instagram_feed">TM Instagram</a></li>
+                          <li><a href="#social_login">Joomla Social Login</a></li>
+                          <li><a href="#acymailing">Acymailing</a></li>
+                          <li><a href="#tmaddthis">TM Addthis</a></li>
+                          <li><a href="#googlemap">Googlemap plugin</a></li>
+                          <li><a href="#cookies">Joomla Cookie Directive Plugin</a></li>
+                          <li><a href="#joomgallery">JoomGallery</a></li>
                         </ul>
                       </dd>
                     </dl>
@@ -1109,6 +1120,147 @@ Tenga en cuenta: si Usted ha terminado la sección "Complete Installation/Instal
     <p class="muted text-center">Img. 24. Configuración del módulo TM Ajax Contact Form</p></div>
 
   </div>
+
+  <div id="olark">
+    <h3>M&oacute;dulo de chat en vivo de TM Olark</h3>
+    <div class="img-container"><figure class="img-polaroid"><img src="img/olark.jpg" alt=""></figure>
+    <p class="muted text-center">Imagen 25. M&oacute;dulo de chat en vivo de TM Olark</p></div>
+    <p>TM Olark es un m&oacute;dulo de chat tiempo real para Joomla.</p>
+    <div class="img-container"><figure class="img-polaroid"><img src="img/olark-2.jpg" alt=""></figure>
+    <p class="muted text-center">Imagen 25-1. Configuraci&oacute;n del chat en vivo de TM Olark</p></div>
+    <p>En la configuraci&oacute;n general deber&aacute; a&ntilde;adir el identificador de sitio web que se mostrar&aacute; despu&eacute;s de registrarse y rellenat todos los detalles en <a href="https://www.olark.com/install" target="_blank" rel="nofollow">https://www.olark.com/install</a></p>
+    <div class="img-container"><figure class="img-polaroid"><img src="img/olark-3.jpg" alt=""></figure>
+    <p class="muted text-center">Imagen 25-2. Identificador del sitio web en el panel de control Olark.</p></div>
+    <p>Nuestra empresa le ofrece <a href="https://www.olark.com/pricing" target="_blank" rel="nofollow">"Bronce"</a> un paquete de 6 meses gratis. Use este enlace <a href="https://www.olark.com/signup/create_new_account/18981?utm_source=templatemonster&utm_medium=offer&utm_campaign=default" target="_blank" rel="nofollow">enlace</a> para registrarse.</p>
+  </div>
+
+  <div id="facebook_feed">
+<h3>Pantalla de SW Facebook</h3>
+<div class="img-container"><figure class="img-polaroid"><img src="img/facebook_feed-1.jpg" alt=""></figure>
+<p class="muted text-center">Img. 26. M&oacute;dulo para mostrar SW Facebook</p></div>
+<p>Pantalla de SW Facebook - m&oacute;dulo que permite mostrar el bot&oacute;n "Me Gusta de Facebook".</p>
+<div class="img-container"><figure class="img-polaroid"><img src="img/facebook_feed-2.jpg" alt=""></figure>
+<p class="muted text-center">Img. 26-1. Configuraci&oacute;n del m&oacute;dulo de la pantalla de SW Facebook</p></div>
+<p>Aqu&iacute; puedes ver las configuraciones de la pantalla de SW Facebook. No dudes en consultar m&aacute;s detalles en la <a href="http://socialwidgets.net/documentation/26-sw-facebook-display.html" target="_blank" rel="nofollow">p&aacute;gina web oficial</a>.</p>
+</div>
+
+<div id="pinterest_feed">
+<h3>Pantalla de SW Pinterest</h3>
+<div class="img-container"><figure class="img-polaroid"><img src="img/pinterest_feed-1.jpg" alt=""></figure>
+<p class="muted text-center">Img. 27. M&oacute;dulo para mostrar SW Pinterest</p></div>
+<p>Pantalla de SW Pinterest - m&oacute;dulo que permite mostrar "El Widget del Tablero de Pinterest".</p>
+<div class="img-container"><figure class="img-polaroid"><img src="img/pinterest_feed-2.jpg" alt=""></figure>
+<p class="muted text-center">Img. 27-1. Configuraci&oacute;n del m&oacute;dulo de la pantalla de SW Pinterest</p></div>
+<p>Aqu&iacute; puedes ver las configuraciones de visualizaci&oacute;n de SW Pinterest. No dudes en consultar m&aacute;s detalles en la <a href="http://socialwidgets.net/documentation/28-sw-pinterest-display.html" target="_blank" rel="nofollow">p&aacute;gina web oficial</a>.</p>
+</div>
+
+<div id="twitter_feed">
+<h3>Pantalla de SW Twitter</h3>
+<div class="img-container"><figure class="img-polaroid"><img src="img/twitter_feed-1.jpg" alt=""></figure>
+<p class="muted text-center">Img. 28. M&oacute;dulo para mostrar SW Twitter</p></div>
+<p>Pantalla de SW Twitter - m&oacute;dulo que permite mostrar "El Widget de Twitter".</p>
+<div class="img-container"><figure class="img-polaroid"><img src="img/twitter_feed-2.jpg" alt=""></figure>
+<p class="muted text-center">Img. 28-1. Configuraci&oacute;n del m&oacute;dulo de la pantalla de SW Twitter</p></div>
+<p>Aqu&iacute; puedes ver las configuraciones de visualizaci&oacute;n de SW Twitter. No dudes en consultar m&aacute;s detalles en la <a href="http://socialwidgets.net/documentation/27-sw-twitter-display.html" target="_blank" rel="nofollow">p&aacute;gina web oficial</a>.</p>
+</div>
+
+<div id="instagram_feed">
+<h3>TM Instagram</h3>
+<div class="img-container"><figure class="img-polaroid"><img src="img/instagram-1.jpg" alt=""></figure>
+<p class="muted text-center">Img. 29. M&oacute;dulo de TM Instagram</p></div>
+<p>TM Instagram - m&oacute;dulo que permite mostrar "El Widget de Instagram"</p>
+<div class="img-container"><figure class="img-polaroid"><img src="img/instagram-2.jpg" alt=""></figure>
+<p class="muted text-center">Img. 29-1.  Configuraci&oacute;n del m&oacute;dulo de TM Instagram</p></div>
+<p>Aqu&iacute; puedes ver los ajustes principales de TM Instagram. Introduzca el nombre del perfil de Instagram en el campo nombre de usuario, introduzca el número deseado de im&aacute;genes en el campo Número de fotos, configure el ID de la aplicaci&oacute;n de Instagram en el campo Tu Instagram ID de CLIENTE. Para de obtener el ID, siga al enlace <a href="https://instagram.com/accounts/login/?next=%2Fdeveloper%2F" target="_blank" rel="nofollow">https://instagram.com/accounts/login/?next=%2Fdeveloper%2F</a> donde usted necesita registrar una cuenta. Despu&eacute;s, siga este enlace <a href="http://instagram.com/developer/clients/manage/" target="_blank" rel="nofollow">http://instagram.com/developer/clients/manage/</a> y cree la aplicaci&oacute;n. A continuaci&oacute;n obtendr&aacute; los datos de sus aplicaciones, donde podr&aacute;s ver el ID de CLIENTE.</p>
+</div>
+
+<div id="social_login">
+<h3>Joomla Social Login</h3>
+<div class="img-container"><figure class="img-polaroid"><img src="img/sociallogin-1.jpg" alt=""></figure>
+<p class="muted text-center">Img. 30. Componente de Joomla Social Login</p></div>
+<p>Joomla Social Login - componente que permite la muestra de los botones de acceso a cuentas de redes sociales.</p>
+<div class="img-container"><figure class="img-polaroid"><img src="img/sociallogin-2.jpg" alt=""></figure>
+<p class="muted text-center">Img. 30-1. Configuraci&oacute;n de Joomla Social Login</p></div>
+<p>Aqu&iacute; puedes ver los ajustes principales de Joomla Social Login. No dudes en consultar m&aacute;s detalles en la <a href="http://support.loginradius.com/hc/en-us/articles/201968987-Joomla-Social-Login-instructions" target="_blank" rel="nofollow">p&aacute;gina web oficial</a>.</p>
+</div>
+
+<div id="acymailing">
+<h3>Acymailing</h3>
+<div class="img-container"><figure class="img-polaroid"><img src="img/acymailing-1.jpg" alt=""></figure>
+<p class="muted text-center">Img. 31. Componente de Acymailing</p></div>
+<p>Acymailing - el componente de suscripci&oacute;n para Joomla!</p>
+<div class="img-container"><figure class="img-polaroid"><img src="img/acymailing-2.jpg" alt=""></figure>
+<p class="muted text-center">Img. 31-1. Configuraci&oacute;n de Acymailing</p></div>
+<p>Aqu&iacute; est&aacute; la p&aacute;gina principal del componente de AcyMailing en el panel de administraci&oacute;n. No dudes en consultar m&aacute;s detalles en la <a href="https://www.acyba.com/acymailing/doc.html" target="_blank" rel="nofollow">p&aacute;gina web oficial</a>.</p>
+<div class="img-container"><figure class="img-polaroid"><img src="img/acymailing-3.jpg" alt=""></figure>
+<p class="muted text-center">Img. 31-2.  Configuraci&oacute;n de Acymailing</p></div>
+<p>Aqu&iacute; est&aacute; la p&aacute;gina de configuraci&oacute;n del m&oacute;dulo AcyMailing. No dudes en consultar m&aacute;s detalles en la <a href="https://www.acyba.com/acymailing/62-acymailing-module.html" target="_blank" rel="nofollow">p&aacute;gina web oficial</a>.</p>
+<p>Esta es la lista de los plugins del sistema que est&aacute;n siendo instalados junto con el componente AcyMailing:</p>
+<ul>
+<li>plg_acymailing_contentplugin</li>
+<li>plg_acymailing_managetext</li>
+<li>plg_acymailing_online</li>
+<li>plg_acymailing_share</li>
+<li>plg_acymailing_stats</li>
+<li>plg_acymailing_tablecontents</li>
+<li>plg_acymailing_tagcbuser</li>
+<li>plg_acymailing_tagcontent</li>
+<li>plg_acymailing_tagsubscriber</li>
+<li>plg_acymailing_tagsubscription</li>
+<li>plg_acymailing_tagtime</li>
+<li>plg_acymailing_taguser</li>
+<li>plg_acymailing_template</li>
+<li>plg_editors_acyeditor</li>
+<li>plg_system_regacymailing</li>
+</ul>
+</div>
+
+<div id="tmaddthis">
+<h3>TM Addthis</h3>
+<div class="img-container"><figure class="img-polaroid"><img src="img/addthis-1.jpg" alt=""></figure>
+<p class="muted text-center">Img. 32. Plugin TM Addthis</p></div>
+<p>TM Addthis - plugins que permiten mostrar los botones sociales para "Compartir".</p>
+<div class="img-container"><figure class="img-polaroid"><img src="img/addthis-2.jpg" alt=""></figure>
+<p class="muted text-center">Img. 32-1. Configuraci&oacute;n de TM Addthis</p></div>
+<p>Aqu&iacute; puedes ver las configuraciones del plugin TM Addthis. Introduzca el ID de su perfil en el campo ID de perfil. Para obtener el ID de perfil, es necesario crear una cuenta y un perfil en la siguiente p&aacute;gina <a href="https://www.addthis.com/settings/publisher" target="_blank" rel="nofollow">https://www.addthis.com/settings/publisher</a>.</p>
+</div>
+
+<div id="googlemap">
+<h3>Plugin de Googlemap</h3>
+<div class="img-container"><figure class="img-polaroid"><img src="img/googlemap-1.jpg" alt=""></figure>
+<p class="muted text-center">Img. 33. Plugin de Googlemap</p></div>
+<p>Googlemap - plugin que permite mostrar los mapas de Google.</p>
+<div class="img-container"><figure class="img-polaroid"><img src="img/googlemap-2.jpg" alt=""></figure>
+<p class="muted text-center">Img. 33-1. Configuraci&oacute;n de Googlemap</p></div>
+<p>Aqu&iacute; est&aacute; la p&aacute;gina principal del plugin de Googlemap en el panel de administraci&oacute;n. No dudes en consultar m&aacute;s detalles en la <a href="http://tech.reumer.net/Google-Maps/Documentation-of-plugin-Googlemap/" target="_blank" rel="nofollow">p&aacute;gina web oficial</a>.</p>
+</div>
+
+<div id="cookies">
+<h3>Plugin Joomla Cookie Directive</h3>
+<div class="img-container"><figure class="img-polaroid"><img src="img/cookies-1.jpg" alt=""></figure>
+<p class="muted text-center">Img. 34. Plugin Joomla Cookie Directive</p></div>
+<p>Plugin Joomla Cookie Directive - plugin que permite desplegar un banner con un mensaje sobre el uso de las cookies.</p>
+<div class="img-container"><figure class="img-polaroid"><img src="img/cookies-2.jpg" alt=""></figure>
+<p class="muted text-center">Img. 34-1. Configuraci&oacute;n de Joomla Cookie Directive</p></div>
+<p>Aqu&iacute; puedes ver los ajustes principales del Plugin Joomla Cookie Directive. No dudes en consultar m&aacute;s detalles en la <a href="http://www.channeldigital.co.uk/resources/joomla-cookie-directive-plugin.html" target="_blank" rel="nofollow">p&aacute;gina web oficial</a>.</p>
+</div>
+
+<div id="joomgallery">
+<h3>JoomGallery</h3>
+<div class="img-container"><figure class="img-polaroid"><img src="img/gallery-1.jpg" alt=""></figure>
+<p class="muted text-center">Img. 35. JoomGallery, p&aacute;gina de la galer&iacute;a</p></div>
+<p>JoomGallery - componente que permite crear una photopallery completa basado en Joomla!</p>
+<div class="img-container"><figure class="img-polaroid"><img src="img/gallery-2.jpg" alt=""></figure>
+<p class="muted text-center">Img. 35-1. JoomGallery, p&aacute;gina de la categor&iacute;a</p></div>
+<div class="img-container"><figure class="img-polaroid"><img src="img/gallery-3.jpg" alt=""></figure>
+<p class="muted text-center">Img. 35-2. JoomGallery, control deslizante</p></div>
+<div class="img-container"><figure class="img-polaroid"><img src="img/gallery-4.jpg" alt=""></figure>
+<p class="muted text-center">Img. 35-3. JoomGallery, p&aacute;gina de descripciones de imagen</p></div>
+<div class="img-container"><figure class="img-polaroid"><img src="img/gallery-5.jpg" alt=""></figure>
+<p class="muted text-center">Img. 35-4. Configuraci&oacute;n de JoomGallery</p></div>
+<p>Aqu&iacute; est&aacute; la p&aacute;gina principal del componente JoomGallery. No dudes en consultar m&aacute;s detalles en la <a href="http://www.en.joomgallery.net/documentation/" target="_blank" rel="nofollow">p&aacute;gina web oficial</a>. Adem&aacute;s, hay un plugin JoomFancybox que debe ser instalada para trabajar con el componente.</p>
+</div>
+
 
 </section>
 
