--- a/index_pl.html
+++ b/index_pl.html
@@ -101,7 +101,7 @@
                             <li><a href="#complete_install">Kompletna Instalacja</a></li>
                             <li><a href="#template-installation">Instalacja Szablonu</a></li>
                             <li><a href="#sample-data-installation">Instalacja Danych</a></li>
-							<li><a href="#modules-installation">Instalacja Modułów</a></li>
+							              <li><a href="#modules-installation">Instalacja Modułów</a></li>
                            </ul> 
                        </dd>
                      </dl> 
@@ -129,6 +129,17 @@
                           <li><a href="#komento">Komento</a></li>
                           <li><a href="#kunena">Kunena</a></li>
                           <li><a href="#tm_ajax_contact_form">Moduł Formularza Kontaktowego TM Ajax</a></li>
+                          <li><a href="#olark">TM Olark live chat</a></li>
+                          <li><a href="#facebook_feed">SW Facebook Display</a></li>
+                          <li><a href="#pinterest_feed">SW Pinterest Display</a></li>
+                          <li><a href="#twitter_feed">SW Twitter Display</a></li>
+                          <li><a href="#instagram_feed">TM Instagram</a></li>
+                          <li><a href="#social_login">Joomla Social Login</a></li>
+                          <li><a href="#acymailing">Acymailing</a></li>
+                          <li><a href="#tmaddthis">TM Addthis</a></li>
+                          <li><a href="#googlemap">Googlemap plugin</a></li>
+                          <li><a href="#cookies">Joomla Cookie Directive Plugin</a></li>
+                          <li><a href="#joomgallery">JoomGallery</a></li>
                         </ul>
                       </dd>
                     </dl>
@@ -1099,6 +1110,146 @@
 <div class="img-container"><figure class="img-polaroid"><img src="img/contact-form-2.png" alt=""></figure>
 <p class="muted text-center">Img. 24. Ustawienia Modułu Formularza Kontaktowego TM Ajax</p></div>
 
+</div>
+
+<div id="olark">
+  <h3>Moduł TM Olark czat na żywo</h3>
+  <div class="img-container"><figure class="img-polaroid"><img src="img/olark.jpg" alt=""></figure>
+  <p class="muted text-center">Obrazek 25. Moduł TM Olark czat na żywo</p></div>
+  <p>TM Olark to moduł czatu na żywo dla Joomla.</p>
+  <div class="img-container"><figure class="img-polaroid"><img src="img/olark-2.jpg" alt=""></figure>
+  <p class="muted text-center">Obrazek 25-1. Ustawienia modułu TM Olark czat na żywo</p></div>
+  <p>W ustawieniach ogólnych należy dodać identyfikator strony internetowej, który pokaże się po rejestracji i wypełnieniu wszystkich informacji na <a href="https://www.olark.com/install" target="_blank" rel="nofollow">https://www.olark.com/install</a></p>
+  <div class="img-container"><figure class="img-polaroid"><img src="img/olark-3.jpg" alt=""></figure>
+  <p class="muted text-center">Obrazek 25-2. Identyfikator strony internetowej w panelu sterowania Olark.</p></div>
+  <p>Nasza firma oferuje Państwu<a href="https://www.olark.com/pricing" target="_blank" rel="nofollow">"Brązowy"</a> pakiet 6 miesięcy za darmo. Użyj następującego linka <a href="https://www.olark.com/signup/create_new_account/18981?utm_source=templatemonster&utm_medium=offer&utm_campaign=default" target="_blank" rel="nofollow">link</a> , aby się zarejestrować.</p>
+</div>
+
+<div id="facebook_feed">
+<h3>Wyświetlacz SW Facebook</h3>
+<div class="img-container"><figure class="img-polaroid"><img src="img/facebook_feed-1.jpg" alt=""></figure>
+<p class="muted text-center">Obrazek 26. Moduł Wyświetlacza SW Facebook</p></div>
+<p>Wyświetlacz SW Facebook - moduł, który pozwala na wyświetlanie "Facebook Like Box".</p>
+<div class="img-container"><figure class="img-polaroid"><img src="img/facebook_feed-2.jpg" alt=""></figure>
+<p class="muted text-center">Obrazek 26-1. Ustawienia modułu Wyświetlacza SW Facebook</p></div>
+<p>Tutaj możesz zobaczyć główne ustawienia Wyświetlacza SW Facebook. Więcej szczegółów uzyskasz na oficjalnej stronie <a href="http://socialwidgets.net/documentation/26-sw-facebook-display.html" target="_blank" rel="nofollow"></a>.</p>
+</div>
+
+<div id="pinterest_feed">
+<h3>Wyświetlacz SW Pinterest</h3>
+<div class="img-container"><figure class="img-polaroid"><img src="img/pinterest_feed-1.jpg" alt=""></figure>
+<p class="muted text-center">Obrazek 27. Moduł Wyświetlacza SW Pinterest</p></div>
+<p>Wyświetlacz SW Pinterest - moduł, który pozwala na wyświetlanie "Pinterest Board Widget".</p>
+<div class="img-container"><figure class="img-polaroid"><img src="img/pinterest_feed-2.jpg" alt=""></figure>
+<p class="muted text-center">Obrazek 27-1. Ustawienia modułu Wyświetlacza SW Pinterest</p></div>
+<p>Tutaj możesz zobaczyć główne ustawienia Wyświetlacza SW Pinterest. Więcej szczegółów uzyskasz na oficjalnej stronie <a href="http://socialwidgets.net/documentation/28-sw-pinterest-display.html" target="_blank" rel="nofollow"></a>.</p>
+</div>
+
+<div id="twitter_feed">
+<h3>Wyświetlacz SW Twitter</h3>
+<div class="img-container"><figure class="img-polaroid"><img src="img/twitter_feed-1.jpg" alt=""></figure>
+<p class="muted text-center">Obrazek 28. Moduł Wyświetlacza SW Twitter</p></div>
+<p>Wyświetlacz SW Twitter - moduł, który pozwala na wyświetlanie "Twitter Widget".</p>
+<div class="img-container"><figure class="img-polaroid"><img src="img/twitter_feed-2.jpg" alt=""></figure>
+<p class="muted text-center">Obrazek 28-1. Ustawienia modułu Wyświetlacza SW Twitter</p></div>
+<p>Tutaj możesz zobaczyć główne ustawienia Wyświetlacza SW Twitter. Więcej szczegółów uzyskasz na oficjalnej stronie <a href="http://socialwidgets.net/documentation/27-sw-twitter-display.html" target="_blank" rel="nofollow"></a>.</p>
+</div>
+
+<div id="instagram_feed">
+<h3>TM Instagram</h3>
+<div class="img-container"><figure class="img-polaroid"><img src="img/instagram-1.jpg" alt=""></figure>
+<p class="muted text-center">Obrazek 29.  Moduł TM Instagram</p></div>
+<p>TM Instagram -  moduł, który pozwala na wyświetlanie "Instagram Widget"</p>
+<div class="img-container"><figure class="img-polaroid"><img src="img/instagram-2.jpg" alt=""></figure>
+<p class="muted text-center">Obrazek 29-1.Ustawienia modułu TM Instagram</p></div>
+<p>Tutaj możesz zobaczyć główne ustawienia TM Instagram. Wprowadź nazwę profilu Instagram w polu nazwy użytkownika Instagram, wprowadź żądaną liczbę obrazów w polu Numbers of photos, ustaw ID aplikacji Instagram w polu z Twoim Instagram CLIENT ID. Aby otrzymać ID, należy kliknąć link <a href="https://instagram.com/accounts/login/?next=%2Fdeveloper%2F" target="_blank" rel="nofollow">https://instagram.com/accounts/login/?next=%2Fdeveloper%2F</a> , gdzie należy zarejestrować konto. Następnie kliknij na ten link <a href="http://instagram.com/developer/clients/manage/" target="_blank" rel="nofollow">http://instagram.com/developer/clients/manage/</a> i utwórz aplikację. Następnie otrzymasz dane Twojej aplikacji, gdzie zobaczysz CLIENT ID.</p>
+</div>
+
+<div id="social_login">
+<h3>Joomla Social Login</h3>
+<div class="img-container"><figure class="img-polaroid"><img src="img/sociallogin-1.jpg" alt=""></figure>
+<p class="muted text-center">Obrazek 30. Komponent Joomla Social Login</p></div>
+<p>Joomla Social Login - komponent, który umożliwia wyświetlanie przycisków logowania do kont sieci społecznościowych.</p>
+<div class="img-container"><figure class="img-polaroid"><img src="img/sociallogin-2.jpg" alt=""></figure>
+<p class="muted text-center">Obrazek 30-1. Ustawienia Joomla Social Login</p></div>
+<p>Tutaj możesz zobaczyć główne ustawienia Joomla Social Login. Więcej szczegółów uzyskasz na oficjalnej stronie <a href="http://support.loginradius.com/hc/en-us/articles/201968987-Joomla-Social-Login-instructions" target="_blank" rel="nofollow"></a>.</p>
+</div>
+
+<div id="acymailing">
+<h3>Acymailing</h3>
+<div class="img-container"><figure class="img-polaroid"><img src="img/acymailing-1.jpg" alt=""></figure>
+<p class="muted text-center">Obrazek 31. Komponent Acymailing</p></div>
+<p>Acymailing - komponent subskrypcji dla Joomla!</p>
+<div class="img-container"><figure class="img-polaroid"><img src="img/acymailing-2.jpg" alt=""></figure>
+<p class="muted text-center">Obrazek 31-1. Ustawienia Acymailing</p></div>
+<p>Oto główna strona komponentu Acymailing w panelu administratora. Więcej szczegółów uzyskasz na oficjalnej stronie <a href="https://www.acyba.com/acymailing/doc.html" target="_blank" rel="nofollow"></a>.</p>
+<div class="img-container"><figure class="img-polaroid"><img src="img/acymailing-3.jpg" alt=""></figure>
+<p class="muted text-center">Obrazek 31-2.  Ustawienia Acymailing</p></div>
+<p>To jest strona ustawień modułu Acymailing. Więcej szczegółów uzyskasz na oficjalnej stronie <a href="https://www.acyba.com/acymailing/62-acymailing-module.html" target="_blank" rel="nofollow">official website</a>.</p>
+<p>Oto lista wtyczek systemowych, które są instalowane razem z komponentem Acymailing:</p>
+<ul>
+<li>plg_acymailing_contentplugin</li>
+<li>plg_acymailing_managetext</li>
+<li>plg_acymailing_online</li>
+<li>plg_acymailing_share</li>
+<li>plg_acymailing_stats</li>
+<li>plg_acymailing_tablecontents</li>
+<li>plg_acymailing_tagcbuser</li>
+<li>plg_acymailing_tagcontent</li>
+<li>plg_acymailing_tagsubscriber</li>
+<li>plg_acymailing_tagsubscription</li>
+<li>plg_acymailing_tagtime</li>
+<li>plg_acymailing_taguser</li>
+<li>plg_acymailing_template</li>
+<li>plg_editors_acyeditor</li>
+<li>plg_system_regacymailing</li>
+</ul>
+</div>
+
+<div id="tmaddthis">
+<h3>TM Addthis</h3>
+<div class="img-container"><figure class="img-polaroid"><img src="img/addthis-1.jpg" alt=""></figure>
+<p class="muted text-center">Obrazek 32. Wtyczka TM Addthis</p></div>
+<p>TM Addthis - wtyczki, które pozwalają wyświetlić przyciski "share".</p>
+<div class="img-container"><figure class="img-polaroid"><img src="img/addthis-2.jpg" alt=""></figure>
+<p class="muted text-center">Obrazek 32-1. Ustawienia TM Addthis</p></div>
+<p>Tutaj możesz zobaczyć główne ustawienia wtyczki TM Addthis. Wprowadź ID Twojego profilu w polu Profil ID. W celu uzyskania ID profilu, musisz zarejestrować konto i stworzyć profil na następującej stronie <a href="https://www.addthis.com/settings/publisher" target="_blank" rel="nofollow">https://www.addthis.com/settings/publisher</a>.</p>
+</div>
+
+<div id="googlemap">
+<h3>Wtyczka Googlemap</h3>
+<div class="img-container"><figure class="img-polaroid"><img src="img/googlemap-1.jpg" alt=""></figure>
+<p class="muted text-center">Obrazek 33. Wtyczka Googlemap</p></div>
+<p>Googlemap - wtyczka, która pozwala wyświetlić mapę Google.</p>
+<div class="img-container"><figure class="img-polaroid"><img src="img/googlemap-2.jpg" alt=""></figure>
+<p class="muted text-center">Obrazek 33-1. Ustawienia Googlemap</p></div>
+<p>Oto główna strona wtyczki Googlemap w panelu administratora. Więcej szczegółów uzyskasz na oficjalnej stronie <a href="http://tech.reumer.net/Google-Maps/Documentation-of-plugin-Googlemap/" target="_blank" rel="nofollow"></a>.</p>
+</div>
+
+<div id="cookies">
+<h3>Wtyczka Zarządzania plikami Joomla Cookie</h3>
+<div class="img-container"><figure class="img-polaroid"><img src="img/cookies-1.jpg" alt=""></figure>
+<p class="muted text-center">Obrazek 34. Wtyczka Zarządzania plikami Joomla Cookie</p></div>
+<p>Wtyczka Zarządzania plikami Joomla Cookie - wtyczka, która pozwala na wyświetlanie baneru zawierającego wiadomość o korzystaniu z plików cookies.</p>
+<div class="img-container"><figure class="img-polaroid"><img src="img/cookies-2.jpg" alt=""></figure>
+<p class="muted text-center">Obrazek 34-1. Ustawienia wtyczki Zarządzania plikami Joomla Cookie</p></div>
+<p>Tutaj możesz zobaczyć główne ustawienia wtyczki Zarządzania plikami Joomla Cookie. Więcej szczegółów uzyskasz na oficjalnej stronie <a href="http://www.channeldigital.co.uk/resources/joomla-cookie-directive-plugin.html" target="_blank" rel="nofollow"></a>.</p>
+</div>
+
+<div id="joomgallery">
+<h3>JoomGallery</h3>
+<div class="img-container"><figure class="img-polaroid"><img src="img/gallery-1.jpg" alt=""></figure>
+<p class="muted text-center">Obrazek 35. JoomGallery, strona galerii</p></div>
+<p>JoomGallery - komponent, który pozwala na utworzenie pełnej fotogalerii w oparciu o Joomla!</p>
+<div class="img-container"><figure class="img-polaroid"><img src="img/gallery-2.jpg" alt=""></figure>
+<p class="muted text-center">Obrazek 35-1. JoomGallery, strona kategorii</p></div>
+<div class="img-container"><figure class="img-polaroid"><img src="img/gallery-3.jpg" alt=""></figure>
+<p class="muted text-center">Obrazek 35-2. JoomGallery, slider</p></div>
+<div class="img-container"><figure class="img-polaroid"><img src="img/gallery-4.jpg" alt=""></figure>
+<p class="muted text-center">Obrazek 35-3. JoomGallery, strona opisu zdjęcia</p></div>
+<div class="img-container"><figure class="img-polaroid"><img src="img/gallery-5.jpg" alt=""></figure>
+<p class="muted text-center">Obrazek 35-4. Ustawienia JoomGallery</p></div>
+<p>Oto strona główna komponentu JoomGallery. Więcej szczegółów uzyskasz na oficjalnej stronie <a href="http://www.en.joomgallery.net/documentation/" target="_blank" rel="nofollow"></a>.Ponadto, istnieje jeszcze wtyczka JoomFancybox, która musi być zainstalowana w celu współpracy z komponentem.</p>
 </div>
 
 </section>
