--- a/index_tr.html
+++ b/index_tr.html
@@ -129,6 +129,17 @@
                           <li><a href="#komento">Komento</a></li>
                           <li><a href="#kunena">Kunena</a></li>
                           <li><a href="#tm_ajax_contact_form">TM Ajax Contact Form Modülü</a></li>
+                          <li><a href="#olark">TM Olark live chat</a></li>
+                          <li><a href="#facebook_feed">SW Facebook Display</a></li>
+                          <li><a href="#pinterest_feed">SW Pinterest Display</a></li>
+                          <li><a href="#twitter_feed">SW Twitter Display</a></li>
+                          <li><a href="#instagram_feed">TM Instagram</a></li>
+                          <li><a href="#social_login">Joomla Social Login</a></li>
+                          <li><a href="#acymailing">Acymailing</a></li>
+                          <li><a href="#tmaddthis">TM Addthis</a></li>
+                          <li><a href="#googlemap">Googlemap plugin</a></li>
+                          <li><a href="#cookies">Joomla Cookie Directive Plugin</a></li>
+                          <li><a href="#joomgallery">JoomGallery</a></li>
                         </ul>
                       </dd>
                     </dl>
@@ -1099,6 +1110,146 @@
 <div class="img-container"><figure class="img-polaroid"><img src="img/contact-form-2.png" alt=""></figure>
 <p class="muted text-center">Img. 24. TM Ajax Contact Form modül ayarları</p></div>
 
+</div>
+
+<div id="olark">
+  <h3>TM Olark live chat modülü</h3>
+  <div class="img-container"><figure class="img-polaroid"><img src="img/olark.jpg" alt=""></figure>
+  <p class="muted text-center">Image 25. TM Olark live chat modülü</p></div>
+  <p>TM Olark, Joomla için hazýrlanmýþ olan canlý sohbet modülüdür.</p>
+  <div class="img-container"><figure class="img-polaroid"><img src="img/olark-2.jpg" alt=""></figure>
+  <p class="muted text-center">Image 25-1. TM Olark live chat modül ayarlarý</p></div>
+  <p>Öncelikle <a href="https://www.olark.com/install" target="_blank" rel="nofollow">https://www.olark.com/install</a> adresinden kayýt olmalýsýnýz. Kayýt esnasýnda sizden istenen bilgileri girdikten sonra, genel ayarlar bölümüne websitenizi tanýtmak amacýyla bir kimlik eklemelisiniz.</p>
+  <div class="img-container"><figure class="img-polaroid"><img src="img/olark-3.jpg" alt=""></figure>
+  <p class="muted text-center">Image 25-2. Olark kontrol panelindeki website kimliði.</p></div>
+  <p>Þirketimiz size, 6 aylýk ücretsiz <a href="https://www.olark.com/pricing" target="_blank" rel="nofollow">"Bronze"</a> paket vermektedir. Kayýt olmak için <a href="https://www.olark.com/signup/create_new_account/18981?utm_source=templatemonster&utm_medium=offer&utm_campaign=default" target="_blank" rel="nofollow">bu adrese</a> týklayýnýz.</p>
+</div>
+
+<div id="facebook_feed">
+<h3>SW Facebook Display</h3>
+<div class="img-container"><figure class="img-polaroid"><img src="img/facebook_feed-1.jpg" alt=""></figure>
+<p class="muted text-center">Img. 26. SW Facebook Display modülü</p></div>
+<p>SW Facebook Display - bu modül Facebook beðeni kutusunu gösterir.</p>
+<div class="img-container"><figure class="img-polaroid"><img src="img/facebook_feed-2.jpg" alt=""></figure>
+<p class="muted text-center">Img. 26-1. SW Facebook Display modül ayarlarý</p></div>
+<p>SW Facebook Display ayarlarýný buradan görebilirsiniz. Daha fazla detay için <a href="http://socialwidgets.net/documentation/26-sw-facebook-display.html" target="_blank" rel="nofollow">resmi site</a>ye bakabilirsiniz.</p>
+</div>
+
+<div id="pinterest_feed">
+<h3>SW Pinterest Display</h3>
+<div class="img-container"><figure class="img-polaroid"><img src="img/pinterest_feed-1.jpg" alt=""></figure>
+<p class="muted text-center">Img. 27. SW Pinterest Display modülü</p></div>
+<p>SW Pinterest Display - bu modül Pinterest Duvar Bileþeni'nin görüntülenmesini saðlar.</p>
+<div class="img-container"><figure class="img-polaroid"><img src="img/pinterest_feed-2.jpg" alt=""></figure>
+<p class="muted text-center">Img. 27-1. SW Pinterest Display modül ayarlarý</p></div>
+<p>SW Pinterest Display ana ayarlarýný buradan görebilirsiniz. Daha fazla detay için <a href="http://socialwidgets.net/documentation/28-sw-pinterest-display.html" target="_blank" rel="nofollow">resmi site</a>ye bakabilirsiniz.</p>
+</div>
+
+<div id="twitter_feed">
+<h3>SW Twitter Display</h3>
+<div class="img-container"><figure class="img-polaroid"><img src="img/twitter_feed-1.jpg" alt=""></figure>
+<p class="muted text-center">Img. 28. SW Twitter Display modülü</p></div>
+<p>SW Twitter Display - bu modül Twitter Bileþeni'nin görüntülenmesini saðlar..</p>
+<div class="img-container"><figure class="img-polaroid"><img src="img/twitter_feed-2.jpg" alt=""></figure>
+<p class="muted text-center">Img. 28-1. SW Twitter Display modül ayarlarý</p></div>
+<p>SW Twitter Display ayarlarýný buradan görebilirsiniz. Daha fazla detay için <a href="http://socialwidgets.net/documentation/27-sw-twitter-display.html" target="_blank" rel="nofollow">resmi site</a>ye bakabilirsiniz.</p>
+</div>
+
+<div id="instagram_feed">
+<h3>TM Instagram</h3>
+<div class="img-container"><figure class="img-polaroid"><img src="img/instagram-1.jpg" alt=""></figure>
+<p class="muted text-center">Img. 29.  TM Instagram modülü</p></div>
+<p>TM Instagram -  bu modül Instagram Bileþeni'nin görüntülenmesini saðlar.</p>
+<div class="img-container"><figure class="img-polaroid"><img src="img/instagram-2.jpg" alt=""></figure>
+<p class="muted text-center">Img. 29-1.TM Instagram modül ayarlarý</p></div>
+<p>TM Instagram ayarlarýný buradan görebilirsiniz. Instagram profil adýnýzý kullanýcý adý alanýna yazýn. Gereken sayýda görseli fotoðraf sayýsý alanýna yazýn. Your Instagram CLIENT ID kýsmýna Instagram uygulamasýný kullanabilmek için sahip olduðunuz ID (Kimlik) yazýn. ID almak için <a href="https://instagram.com/accounts/login/?next=%2Fdeveloper%2F" target="_blank" rel="nofollow">https://instagram.com/accounts/login/?next=%2Fdeveloper%2F</a> adresinden kayýt olun. Ardýndan <a href="http://instagram.com/developer/clients/manage/" target="_blank" rel="nofollow">http://instagram.com/developer/clients/manage/</a> adresinden uygulamayý oluþturun. Artýk uygulama verilerinde CLIENT ID (Kullanýcý Kimliði) görüntülenecektir.</p>
+</div>
+
+<div id="social_login">
+<h3>Joomla Social Login</h3>
+<div class="img-container"><figure class="img-polaroid"><img src="img/sociallogin-1.jpg" alt=""></figure>
+<p class="muted text-center">Img. 30. Joomla Social Login bileþeni</p></div>
+<p>Joomla Social Login - sosyal að hesaplarý için tanýmlama düðmelerini gösteren bileþendir.</p>
+<div class="img-container"><figure class="img-polaroid"><img src="img/sociallogin-2.jpg" alt=""></figure>
+<p class="muted text-center">Img. 30-1. Joomla Social Login ayarlarý</p></div>
+<p>Joomla Social Login ayarlarýný buradan görebilirsiniz. Daha fazla detay için <a href="http://support.loginradius.com/hc/en-us/articles/201968987-Joomla-Social-Login-instructions" target="_blank" rel="nofollow">resmi site</a>ye bakabilirsiniz.</p>
+</div>
+
+<div id="acymailing">
+<h3>Acymailing</h3>
+<div class="img-container"><figure class="img-polaroid"><img src="img/acymailing-1.jpg" alt=""></figure>
+<p class="muted text-center">Img. 31. Acymailing bileþeni</p></div>
+<p>Acymailing - Joomla! için abonelik bileþenidir.</p>
+<div class="img-container"><figure class="img-polaroid"><img src="img/acymailing-2.jpg" alt=""></figure>
+<p class="muted text-center">Img. 31-1. Acymailing ayarlarý</p></div>
+<p>Acymailing bileþeni için yönetici panelindeki ana sayfayý buradan görüntüleyebilirsiniz. Daha fazla detay için <a href="https://www.acyba.com/acymailing/doc.html" target="_blank" rel="nofollow">resmi site</a>ye bakabilirsiniz.</p>
+<div class="img-container"><figure class="img-polaroid"><img src="img/acymailing-3.jpg" alt=""></figure>
+<p class="muted text-center">Img. 31-2.  Acymailing ayarlarý</p></div>
+<p>Acymailing modülünün düzenleme sayfasý. Daha fazla detay için <a href="https://www.acyba.com/acymailing/62-acymailing-module.html" target="_blank" rel="nofollow">resmi site</a>ye bakabilirsiniz.</p>
+<p>Acymailing ile birlikte kurulan sistem eklentilerinin listesi:</p>
+<ul>
+<li>plg_acymailing_contentplugin</li>
+<li>plg_acymailing_managetext</li>
+<li>plg_acymailing_online</li>
+<li>plg_acymailing_share</li>
+<li>plg_acymailing_stats</li>
+<li>plg_acymailing_tablecontents</li>
+<li>plg_acymailing_tagcbuser</li>
+<li>plg_acymailing_tagcontent</li>
+<li>plg_acymailing_tagsubscriber</li>
+<li>plg_acymailing_tagsubscription</li>
+<li>plg_acymailing_tagtime</li>
+<li>plg_acymailing_taguser</li>
+<li>plg_acymailing_template</li>
+<li>plg_editors_acyeditor</li>
+<li>plg_system_regacymailing</li>
+</ul>
+</div>
+
+<div id="tmaddthis">
+<h3>TM Addthis</h3>
+<div class="img-container"><figure class="img-polaroid"><img src="img/addthis-1.jpg" alt=""></figure>
+<p class="muted text-center">Img. 32. TM Addthis eklentisi</p></div>
+<p>TM Addthis - sosyal 'paylaþým' düðmelerini gösteren eklentidir.</p>
+<div class="img-container"><figure class="img-polaroid"><img src="img/addthis-2.jpg" alt=""></figure>
+<p class="muted text-center">Img. 32-1. TM Addthis ayarlarý</p></div>
+<p>TM Addthis eklentisinin ana ayarlarýný buradan görüntüleyebilirsiniz. Profil ID (Kimlik) alanýna kimliðinizi yazýn. Profil kimliði almak için <a href="https://www.addthis.com/settings/publisher" target="_blank" rel="nofollow">https://www.addthis.com/settings/publisher</a> adresinden kayýt olup, bir kimlik oluþturmalýsýnýz.</p>
+</div>
+
+<div id="googlemap">
+<h3>Googlemap plugin</h3>
+<div class="img-container"><figure class="img-polaroid"><img src="img/googlemap-1.jpg" alt=""></figure>
+<p class="muted text-center">Img. 33. Googlemap eklentisi</p></div>
+<p>Googlemap - Google haritasýný görüntüleyen eklentidir.</p>
+<div class="img-container"><figure class="img-polaroid"><img src="img/googlemap-2.jpg" alt=""></figure>
+<p class="muted text-center">Img. 33-1. Googlemap ayarlarý</p></div>
+<p>Googlemap eklentisinin yönetici panelinizdeki ana ayar sayfasýný buradan görüntüleyebilirsiniz. Daha fazla detay için <a href="http://tech.reumer.net/Google-Maps/Documentation-of-plugin-Googlemap/" target="_blank" rel="nofollow">resmi site</a>ye bakabilirsiniz.</p>
+</div>
+
+<div id="cookies">
+<h3>Joomla Cookie Directive Plugin</h3>
+<div class="img-container"><figure class="img-polaroid"><img src="img/cookies-1.jpg" alt=""></figure>
+<p class="muted text-center">Img. 34. Joomla Cookie Directive Eklentisi</p></div>
+<p>Joomla Cookie Directive Eklentisi - çerez kullanýmý hakkýnda mesaj içeren bir banner gösterilmesini saðlar.</p>
+<div class="img-container"><figure class="img-polaroid"><img src="img/cookies-2.jpg" alt=""></figure>
+<p class="muted text-center">Img. 34-1. Joomla Cookie Directive Plugin ayarlarý</p></div>
+<p>Joomla Cookie Directive Eklentisinin ana ayarlarýný buradan görüntüleyebilirsiniz. Daha fazla detay için <a href="http://www.channeldigital.co.uk/resources/joomla-cookie-directive-plugin.html" target="_blank" rel="nofollow">resmi site</a>ye bakabilirsiniz.</p>
+</div>
+
+<div id="joomgallery">
+<h3>JoomGallery</h3>
+<div class="img-container"><figure class="img-polaroid"><img src="img/gallery-1.jpg" alt=""></figure>
+<p class="muted text-center">Img. 35. JoomGallery, galeri sayfasý</p></div>
+<p>JoomGallery - Joomla! için tam bir fotoðraf galerisi oluþturmanýzý saðlayan bileþendir.</p>
+<div class="img-container"><figure class="img-polaroid"><img src="img/gallery-2.jpg" alt=""></figure>
+<p class="muted text-center">Img. 35-1. JoomGallery, kategori sayfasý</p></div>
+<div class="img-container"><figure class="img-polaroid"><img src="img/gallery-3.jpg" alt=""></figure>
+<p class="muted text-center">Img. 35-2. JoomGallery, slider</p></div>
+<div class="img-container"><figure class="img-polaroid"><img src="img/gallery-4.jpg" alt=""></figure>
+<p class="muted text-center">Img. 35-3. JoomGallery, görsel tanýmlama sayfasý</p></div>
+<div class="img-container"><figure class="img-polaroid"><img src="img/gallery-5.jpg" alt=""></figure>
+<p class="muted text-center">Img. 35-4. JoomGallery ayarlarý</p></div>
+<p>JoomGallery bileþeninin ayarlarýný buradan görüntüleyebilirsiniz. Daha fazla detay için <a href="http://www.en.joomgallery.net/documentation/" target="_blank" rel="nofollow">resmi site</a>ye bakabilirsiniz. Ayrýca, bu bileþenin çalýþmasý için JoomFancybox eklentisi de kurulmalýdýr.</p>
 </div>
 
 </section>
